# serializer version: 1
# name: TestConversionChaining.test_event_to_interval_to_event_roundtrip
  '''
  patient_id,time,event_type,provider
  1,2023-01-21,EXAM,NURSE
  1,2023-01-22,FOLLOW_UP,RADIOLOGIST
  1,2023-02-28,EXAM,
  1,2023-03-29,FOLLOW_UP,RADIOLOGIST
  1,2023-06-10,VACCINATION,
  1,2023-07-11,VACCINATION,LABORATORY
  1,2023-08-03,EMERGENCY,NURSE
  1,2023-09-15,VACCINATION,SPECIALIST
  1,2023-12-11,CONSULTATION,NURSE
  1,2023-12-15,EMERGENCY,
  1,2023-12-26,EMERGENCY,
  2,2023-02-19,VACCINATION,SPECIALIST
  2,2023-02-23,EXAM,RADIOLOGIST
  2,2023-02-24,VACCINATION,GENERAL_PRACTITIONER
  2,2023-03-30,VACCINATION,SPECIALIST
  2,2023-05-11,FOLLOW_UP,NURSE
  2,2023-05-15,FOLLOW_UP,GENERAL_PRACTITIONER
  2,2023-06-16,EXAM,RADIOLOGIST
  2,2023-07-09,FOLLOW_UP,
  2,2023-07-21,VACCINATION,
  2,2023-08-06,VACCINATION,SPECIALIST
  2,2023-09-21,EMERGENCY,GENERAL_PRACTITIONER
  2,2023-09-22,EXAM,LABORATORY
  2,2023-09-28,EMERGENCY,RADIOLOGIST
  2,2023-11-06,FOLLOW_UP,SPECIALIST
  2,2023-12-04,FOLLOW_UP,SPECIALIST
  2,2023-12-06,VACCINATION,RADIOLOGIST
  3,2023-01-28,CONSULTATION,RADIOLOGIST
  3,2023-02-02,FOLLOW_UP,NURSE
  3,2023-02-10,FOLLOW_UP,LABORATORY
  3,2023-03-06,CONSULTATION,
  3,2023-03-22,EMERGENCY,
  3,2023-05-16,EMERGENCY,NURSE
  3,2023-06-21,EMERGENCY,NURSE
  3,2023-08-15,FOLLOW_UP,NURSE
  3,2023-08-19,EXAM,GENERAL_PRACTITIONER
  3,2023-09-09,VACCINATION,RADIOLOGIST
  3,2023-09-14,FOLLOW_UP,SPECIALIST
  3,2023-10-16,EMERGENCY,LABORATORY
  3,2023-12-10,CONSULTATION,RADIOLOGIST
  4,2023-01-29,VACCINATION,LABORATORY
  4,2023-03-27,VACCINATION,SPECIALIST
  4,2023-04-06,VACCINATION,LABORATORY
  4,2023-04-18,VACCINATION,RADIOLOGIST
  4,2023-05-14,VACCINATION,RADIOLOGIST
  4,2023-06-09,EMERGENCY,NURSE
  4,2023-06-19,FOLLOW_UP,GENERAL_PRACTITIONER
  4,2023-06-28,CONSULTATION,RADIOLOGIST
  4,2023-07-26,EXAM,SPECIALIST
  4,2023-08-19,FOLLOW_UP,NURSE
  4,2023-09-12,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-01-02,EXAM,
  5,2023-02-21,VACCINATION,SPECIALIST
  5,2023-02-23,FOLLOW_UP,
  5,2023-03-22,EMERGENCY,
  5,2023-04-08,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-04-23,FOLLOW_UP,GENERAL_PRACTITIONER
  5,2023-05-06,EXAM,LABORATORY
  5,2023-05-17,FOLLOW_UP,
  5,2023-06-01,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-06-21,EXAM,RADIOLOGIST
  5,2023-06-29,CONSULTATION,GENERAL_PRACTITIONER
  5,2023-07-22,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-08-19,CONSULTATION,GENERAL_PRACTITIONER
  5,2023-08-21,EMERGENCY,NURSE
  5,2023-09-12,FOLLOW_UP,RADIOLOGIST
  5,2023-10-10,CONSULTATION,
  5,2023-11-03,EXAM,RADIOLOGIST
  5,2023-11-27,EXAM,RADIOLOGIST
  6,2023-02-06,EMERGENCY,GENERAL_PRACTITIONER
  6,2023-03-01,CONSULTATION,SPECIALIST
  6,2023-04-22,CONSULTATION,RADIOLOGIST
  6,2023-05-04,EMERGENCY,LABORATORY
  6,2023-05-08,EXAM,
  6,2023-05-28,VACCINATION,GENERAL_PRACTITIONER
  6,2023-05-31,EXAM,
  6,2023-08-21,EMERGENCY,NURSE
  6,2023-09-16,VACCINATION,RADIOLOGIST
  6,2023-09-20,VACCINATION,SPECIALIST
  6,2023-09-24,VACCINATION,GENERAL_PRACTITIONER
  6,2023-10-31,VACCINATION,LABORATORY
  6,2023-12-12,EMERGENCY,NURSE
  7,2023-03-16,CONSULTATION,RADIOLOGIST
  7,2023-04-14,VACCINATION,NURSE
  7,2023-04-22,CONSULTATION,NURSE
  7,2023-06-01,CONSULTATION,RADIOLOGIST
  7,2023-06-02,FOLLOW_UP,SPECIALIST
  7,2023-07-27,FOLLOW_UP,GENERAL_PRACTITIONER
  7,2023-12-04,EXAM,
  8,2023-01-22,FOLLOW_UP,NURSE
  8,2023-05-08,CONSULTATION,
  8,2023-06-10,VACCINATION,
  8,2023-08-14,FOLLOW_UP,GENERAL_PRACTITIONER
  8,2023-09-21,EMERGENCY,
  8,2023-10-04,VACCINATION,NURSE
  8,2023-10-11,CONSULTATION,LABORATORY
  8,2023-11-13,EMERGENCY,
  9,2023-02-15,FOLLOW_UP,NURSE
  9,2023-06-21,VACCINATION,LABORATORY
  9,2023-07-07,CONSULTATION,RADIOLOGIST
  9,2023-07-10,FOLLOW_UP,LABORATORY
  9,2023-07-11,CONSULTATION,GENERAL_PRACTITIONER
  9,2023-08-21,FOLLOW_UP,LABORATORY
  9,2023-10-29,FOLLOW_UP,NURSE
  10,2023-02-05,FOLLOW_UP,RADIOLOGIST
  10,2023-05-07,EMERGENCY,SPECIALIST
  10,2023-06-10,EMERGENCY,SPECIALIST
  10,2023-09-04,EXAM,NURSE
  10,2023-09-30,CONSULTATION,GENERAL_PRACTITIONER
  10,2023-10-08,EXAM,SPECIALIST
  10,2023-10-26,FOLLOW_UP,SPECIALIST
  10,2023-11-02,CONSULTATION,LABORATORY
  10,2023-11-12,EXAM,GENERAL_PRACTITIONER
  10,2023-11-17,VACCINATION,NURSE
  10,2023-11-19,EXAM,SPECIALIST
  
  '''
# ---
# name: TestConversionChaining.test_event_to_state_to_event_roundtrip
  '''
  patient_id,time,event_type,provider
  1,2023-01-21,EXAM,NURSE
  1,2023-01-22,FOLLOW_UP,RADIOLOGIST
  1,2023-02-28,EXAM,
  1,2023-03-29,FOLLOW_UP,RADIOLOGIST
  1,2023-06-10,VACCINATION,
  1,2023-07-11,VACCINATION,LABORATORY
  1,2023-08-03,EMERGENCY,NURSE
  1,2023-09-15,VACCINATION,SPECIALIST
  1,2023-12-11,CONSULTATION,NURSE
  1,2023-12-15,EMERGENCY,
  1,2023-12-26,EMERGENCY,
  2,2023-02-19,VACCINATION,SPECIALIST
  2,2023-02-23,EXAM,RADIOLOGIST
  2,2023-02-24,VACCINATION,GENERAL_PRACTITIONER
  2,2023-03-30,VACCINATION,SPECIALIST
  2,2023-05-11,FOLLOW_UP,NURSE
  2,2023-05-15,FOLLOW_UP,GENERAL_PRACTITIONER
  2,2023-06-16,EXAM,RADIOLOGIST
  2,2023-07-09,FOLLOW_UP,
  2,2023-07-21,VACCINATION,
  2,2023-08-06,VACCINATION,SPECIALIST
  2,2023-09-21,EMERGENCY,GENERAL_PRACTITIONER
  2,2023-09-22,EXAM,LABORATORY
  2,2023-09-28,EMERGENCY,RADIOLOGIST
  2,2023-11-06,FOLLOW_UP,SPECIALIST
  2,2023-12-04,FOLLOW_UP,SPECIALIST
  2,2023-12-06,VACCINATION,RADIOLOGIST
  3,2023-01-28,CONSULTATION,RADIOLOGIST
  3,2023-02-02,FOLLOW_UP,NURSE
  3,2023-02-10,FOLLOW_UP,LABORATORY
  3,2023-03-06,CONSULTATION,
  3,2023-03-22,EMERGENCY,
  3,2023-05-16,EMERGENCY,NURSE
  3,2023-06-21,EMERGENCY,NURSE
  3,2023-08-15,FOLLOW_UP,NURSE
  3,2023-08-19,EXAM,GENERAL_PRACTITIONER
  3,2023-09-09,VACCINATION,RADIOLOGIST
  3,2023-09-14,FOLLOW_UP,SPECIALIST
  3,2023-10-16,EMERGENCY,LABORATORY
  3,2023-12-10,CONSULTATION,RADIOLOGIST
  4,2023-01-29,VACCINATION,LABORATORY
  4,2023-03-27,VACCINATION,SPECIALIST
  4,2023-04-06,VACCINATION,LABORATORY
  4,2023-04-18,VACCINATION,RADIOLOGIST
  4,2023-05-14,VACCINATION,RADIOLOGIST
  4,2023-06-09,EMERGENCY,NURSE
  4,2023-06-19,FOLLOW_UP,GENERAL_PRACTITIONER
  4,2023-06-28,CONSULTATION,RADIOLOGIST
  4,2023-07-26,EXAM,SPECIALIST
  4,2023-08-19,FOLLOW_UP,NURSE
  4,2023-09-12,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-01-02,EXAM,
  5,2023-02-21,VACCINATION,SPECIALIST
  5,2023-02-23,FOLLOW_UP,
  5,2023-03-22,EMERGENCY,
  5,2023-04-08,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-04-23,FOLLOW_UP,GENERAL_PRACTITIONER
  5,2023-05-06,EXAM,LABORATORY
  5,2023-05-17,FOLLOW_UP,
  5,2023-06-01,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-06-21,EXAM,RADIOLOGIST
  5,2023-06-29,CONSULTATION,GENERAL_PRACTITIONER
  5,2023-07-22,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-08-19,CONSULTATION,GENERAL_PRACTITIONER
  5,2023-08-21,EMERGENCY,NURSE
  5,2023-09-12,FOLLOW_UP,RADIOLOGIST
  5,2023-10-10,CONSULTATION,
  5,2023-11-03,EXAM,RADIOLOGIST
  5,2023-11-27,EXAM,RADIOLOGIST
  6,2023-02-06,EMERGENCY,GENERAL_PRACTITIONER
  6,2023-03-01,CONSULTATION,SPECIALIST
  6,2023-04-22,CONSULTATION,RADIOLOGIST
  6,2023-05-04,EMERGENCY,LABORATORY
  6,2023-05-08,EXAM,
  6,2023-05-28,VACCINATION,GENERAL_PRACTITIONER
  6,2023-05-31,EXAM,
  6,2023-08-21,EMERGENCY,NURSE
  6,2023-09-16,VACCINATION,RADIOLOGIST
  6,2023-09-20,VACCINATION,SPECIALIST
  6,2023-09-24,VACCINATION,GENERAL_PRACTITIONER
  6,2023-10-31,VACCINATION,LABORATORY
  6,2023-12-12,EMERGENCY,NURSE
  7,2023-03-16,CONSULTATION,RADIOLOGIST
  7,2023-04-14,VACCINATION,NURSE
  7,2023-04-22,CONSULTATION,NURSE
  7,2023-06-01,CONSULTATION,RADIOLOGIST
  7,2023-06-02,FOLLOW_UP,SPECIALIST
  7,2023-07-27,FOLLOW_UP,GENERAL_PRACTITIONER
  7,2023-12-04,EXAM,
  8,2023-01-22,FOLLOW_UP,NURSE
  8,2023-05-08,CONSULTATION,
  8,2023-06-10,VACCINATION,
  8,2023-08-14,FOLLOW_UP,GENERAL_PRACTITIONER
  8,2023-09-21,EMERGENCY,
  8,2023-10-04,VACCINATION,NURSE
  8,2023-10-11,CONSULTATION,LABORATORY
  8,2023-11-13,EMERGENCY,
  9,2023-02-15,FOLLOW_UP,NURSE
  9,2023-06-21,VACCINATION,LABORATORY
  9,2023-07-07,CONSULTATION,RADIOLOGIST
  9,2023-07-10,FOLLOW_UP,LABORATORY
  9,2023-07-11,CONSULTATION,GENERAL_PRACTITIONER
  9,2023-08-21,FOLLOW_UP,LABORATORY
  9,2023-10-29,FOLLOW_UP,NURSE
  10,2023-02-05,FOLLOW_UP,RADIOLOGIST
  10,2023-05-07,EMERGENCY,SPECIALIST
  10,2023-06-10,EMERGENCY,SPECIALIST
  10,2023-09-04,EXAM,NURSE
  10,2023-09-30,CONSULTATION,GENERAL_PRACTITIONER
  10,2023-10-08,EXAM,SPECIALIST
  10,2023-10-26,FOLLOW_UP,SPECIALIST
  10,2023-11-02,CONSULTATION,LABORATORY
  10,2023-11-12,EXAM,GENERAL_PRACTITIONER
  10,2023-11-17,VACCINATION,NURSE
  10,2023-11-19,EXAM,SPECIALIST
  
  '''
# ---
# name: TestConversionChaining.test_state_to_interval_to_event_chain
  '''
  patient_id,time,health_state,condition
  1,2023-06-24 12:00:00,HEALTHY,DIGESTIVE
  1,2023-12-23 12:00:00,HEALTHY,
  2,2023-06-24 12:00:00,HEALTHY,CARDIAC
  2,2023-12-23 12:00:00,CHRONIC_MONITORING,CARDIAC
  3,2023-02-17 00:00:00,CONVALESCENCE,CARDIAC
  3,2023-08-10 00:00:00,CHRONIC_MONITORING,NEUROLOGICAL
  3,2023-12-23 00:00:00,REMISSION,CARDIAC
  4,2023-03-21 00:00:00,CHRONIC_MONITORING,NEUROLOGICAL
  4,2023-06-28 00:00:00,CONVALESCENCE,
  4,2023-09-30 12:00:00,REMISSION,DIGESTIVE
  4,2023-12-22 12:00:00,CONVALESCENCE,
  5,2023-06-24 12:00:00,CONVALESCENCE,DIGESTIVE
  5,2023-12-23 12:00:00,CHRONIC_MONITORING,DIGESTIVE
  6,2023-02-03 12:00:00,REMISSION,DIGESTIVE
  6,2023-05-28 00:00:00,TREATMENT,RESPIRATORY
  6,2023-10-15 00:00:00,TREATMENT,DIGESTIVE
  6,2023-12-22 12:00:00,CONVALESCENCE,DIGESTIVE
  7,2023-03-15 12:00:00,HEALTHY,RESPIRATORY
  7,2023-06-23 00:00:00,TREATMENT,NEUROLOGICAL
  7,2023-10-01 00:00:00,HEALTHY,DIGESTIVE
  7,2023-12-22 12:00:00,REMISSION,RESPIRATORY
  8,2023-06-24 12:00:00,CONVALESCENCE,RESPIRATORY
  8,2023-12-23 12:00:00,TREATMENT,
  9,2023-06-24 12:00:00,CONVALESCENCE,DIGESTIVE
  9,2023-12-23 12:00:00,HEALTHY,
  10,2023-06-24 12:00:00,HEALTHY,DIGESTIVE
  10,2023-12-23 12:00:00,CHRONIC_MONITORING,NEUROLOGICAL
  
  '''
# ---
# name: TestConversionMethods.test_as_event_anchor_end[interval]
  '''
  patient_id,time,medication,administration_route,dosage
  1,2023-01-18,PAIN_RELIEVER,,2
  1,2023-01-28,ANTICOAGULANT,CUTANEOUS,1
  1,2023-02-13,ANTIBIOTIC,ORAL,2
  1,2023-05-30,ANTIHYPERTENSIVE,INTRAVENOUS,3
  1,2023-09-20,ANTICOAGULANT,INTRAVENOUS,3
  2,2023-02-03,ANTIBIOTIC,ORAL,2
  2,2023-02-09,PAIN_RELIEVER,,1
  2,2023-02-16,PAIN_RELIEVER,INTRAVENOUS,1
  2,2023-06-09,ANTIBIOTIC,INHALATION,1
  2,2023-08-19,ANTIBIOTIC,CUTANEOUS,3
  2,2023-08-30,ANTIHYPERTENSIVE,INHALATION,2
  3,2023-04-24,ANTIBIOTIC,INHALATION,3
  3,2023-10-21,PAIN_RELIEVER,ORAL,2
  3,2023-11-02,ANTIHYPERTENSIVE,ORAL,2
  4,2023-03-05,PAIN_RELIEVER,INTRAMUSCULAR,3
  4,2023-06-21,ANTIBIOTIC,ORAL,3
  4,2023-07-09,CORTICOSTEROID,INTRAVENOUS,2
  4,2023-07-11,ANTICOAGULANT,ORAL,1
  4,2023-07-27,CORTICOSTEROID,INHALATION,3
  4,2023-10-23,ANTICOAGULANT,INTRAMUSCULAR,2
  5,2023-03-13,ANTIHYPERTENSIVE,INTRAVENOUS,1
  5,2023-03-24,CORTICOSTEROID,CUTANEOUS,2
  5,2023-05-13,ANTIHYPERTENSIVE,INHALATION,2
  5,2023-09-18,ANTIBIOTIC,CUTANEOUS,2
  5,2023-09-20,CORTICOSTEROID,,1
  5,2023-11-14,PAIN_RELIEVER,INTRAMUSCULAR,2
  6,2023-03-18,ANTIHYPERTENSIVE,INTRAMUSCULAR,1
  6,2023-03-27,CORTICOSTEROID,INHALATION,1
  6,2023-04-18,ANTIHYPERTENSIVE,INHALATION,2
  6,2023-05-20,CORTICOSTEROID,CUTANEOUS,1
  6,2023-05-23,CORTICOSTEROID,INTRAVENOUS,3
  6,2023-06-17,ANTIBIOTIC,INTRAMUSCULAR,1
  6,2023-07-23,CORTICOSTEROID,INHALATION,2
  7,2023-02-26,PAIN_RELIEVER,INHALATION,3
  7,2023-04-04,ANTIBIOTIC,,3
  7,2023-05-28,ANTICOAGULANT,INTRAMUSCULAR,2
  8,2023-02-05,ANTIBIOTIC,ORAL,3
  8,2023-02-13,CORTICOSTEROID,,3
  8,2023-02-13,ANTIBIOTIC,ORAL,3
  8,2023-04-18,PAIN_RELIEVER,INHALATION,2
  8,2023-09-12,ANTICOAGULANT,INHALATION,2
  8,2023-10-06,PAIN_RELIEVER,CUTANEOUS,3
  8,2023-10-30,CORTICOSTEROID,ORAL,3
  9,2023-05-13,ANTICOAGULANT,INTRAMUSCULAR,3
  9,2023-05-24,ANTIBIOTIC,ORAL,1
  9,2023-08-10,PAIN_RELIEVER,INTRAVENOUS,1
  9,2023-10-05,ANTIBIOTIC,CUTANEOUS,3
  10,2023-04-09,ANTICOAGULANT,INTRAVENOUS,2
  10,2023-04-23,ANTICOAGULANT,INTRAMUSCULAR,2
  10,2023-05-05,ANTIBIOTIC,INTRAVENOUS,3
  10,2023-08-24,ANTIHYPERTENSIVE,INHALATION,2
  
  '''
# ---
# name: TestConversionMethods.test_as_event_anchor_end[state]
  '''
  patient_id,time,health_state,condition
  1,2023-12-16,HEALTHY,DIGESTIVE
  1,2023-12-31,HEALTHY,
  2,2023-12-16,HEALTHY,CARDIAC
  2,2023-12-31,CHRONIC_MONITORING,CARDIAC
  3,2023-04-05,CONVALESCENCE,CARDIAC
  3,2023-12-15,CHRONIC_MONITORING,NEUROLOGICAL
  3,2023-12-31,REMISSION,CARDIAC
  4,2023-06-08,CHRONIC_MONITORING,NEUROLOGICAL
  4,2023-07-18,CONVALESCENCE,
  4,2023-12-14,REMISSION,DIGESTIVE
  4,2023-12-31,CONVALESCENCE,
  5,2023-12-16,CONVALESCENCE,DIGESTIVE
  5,2023-12-31,CHRONIC_MONITORING,DIGESTIVE
  6,2023-03-09,REMISSION,DIGESTIVE
  6,2023-08-16,TREATMENT,RESPIRATORY
  6,2023-12-14,TREATMENT,DIGESTIVE
  6,2023-12-31,CONVALESCENCE,DIGESTIVE
  7,2023-05-28,HEALTHY,RESPIRATORY
  7,2023-07-19,TREATMENT,NEUROLOGICAL
  7,2023-12-14,HEALTHY,DIGESTIVE
  7,2023-12-31,REMISSION,RESPIRATORY
  8,2023-12-16,CONVALESCENCE,RESPIRATORY
  8,2023-12-31,TREATMENT,
  9,2023-12-16,CONVALESCENCE,DIGESTIVE
  9,2023-12-31,HEALTHY,
  10,2023-12-16,HEALTHY,DIGESTIVE
  10,2023-12-31,CHRONIC_MONITORING,NEUROLOGICAL
  
  '''
# ---
# name: TestConversionMethods.test_as_event_anchor_middle[interval]
  '''
  patient_id,time,medication,administration_route,dosage
  1,2023-01-13 00:00:00,PAIN_RELIEVER,,2
  1,2023-01-20 00:00:00,ANTICOAGULANT,CUTANEOUS,1
  1,2023-02-01 00:00:00,ANTIBIOTIC,ORAL,2
  1,2023-05-26 12:00:00,ANTIHYPERTENSIVE,INTRAVENOUS,3
  1,2023-09-14 12:00:00,ANTICOAGULANT,INTRAVENOUS,3
  2,2023-01-19 12:00:00,ANTIBIOTIC,ORAL,2
  2,2023-01-25 00:00:00,PAIN_RELIEVER,,1
  2,2023-02-10 00:00:00,PAIN_RELIEVER,INTRAVENOUS,1
  2,2023-06-01 12:00:00,ANTIBIOTIC,INHALATION,1
  2,2023-08-13 12:00:00,ANTIBIOTIC,CUTANEOUS,3
  2,2023-08-19 00:00:00,ANTIHYPERTENSIVE,INHALATION,2
  3,2023-04-19 12:00:00,ANTIBIOTIC,INHALATION,3
  3,2023-10-07 12:00:00,PAIN_RELIEVER,ORAL,2
  3,2023-10-21 12:00:00,ANTIHYPERTENSIVE,ORAL,2
  4,2023-02-27 12:00:00,PAIN_RELIEVER,INTRAMUSCULAR,3
  4,2023-06-07 12:00:00,ANTIBIOTIC,ORAL,3
  4,2023-06-25 00:00:00,CORTICOSTEROID,INTRAVENOUS,2
  4,2023-07-01 12:00:00,ANTICOAGULANT,ORAL,1
  4,2023-07-21 12:00:00,CORTICOSTEROID,INHALATION,3
  4,2023-10-19 00:00:00,ANTICOAGULANT,INTRAMUSCULAR,2
  5,2023-03-04 00:00:00,ANTIHYPERTENSIVE,INTRAVENOUS,1
  5,2023-03-15 12:00:00,CORTICOSTEROID,CUTANEOUS,2
  5,2023-05-02 12:00:00,ANTIHYPERTENSIVE,INHALATION,2
  5,2023-09-12 00:00:00,CORTICOSTEROID,,1
  5,2023-09-12 00:00:00,ANTIBIOTIC,CUTANEOUS,2
  5,2023-11-02 00:00:00,PAIN_RELIEVER,INTRAMUSCULAR,2
  6,2023-03-14 00:00:00,ANTIHYPERTENSIVE,INTRAMUSCULAR,1
  6,2023-03-14 12:00:00,CORTICOSTEROID,INHALATION,1
  6,2023-04-10 00:00:00,ANTIHYPERTENSIVE,INHALATION,2
  6,2023-05-05 12:00:00,CORTICOSTEROID,CUTANEOUS,1
  6,2023-05-14 12:00:00,CORTICOSTEROID,INTRAVENOUS,3
  6,2023-06-02 00:00:00,ANTIBIOTIC,INTRAMUSCULAR,1
  6,2023-07-18 12:00:00,CORTICOSTEROID,INHALATION,2
  7,2023-02-14 12:00:00,PAIN_RELIEVER,INHALATION,3
  7,2023-03-24 12:00:00,ANTIBIOTIC,,3
  7,2023-05-20 12:00:00,ANTICOAGULANT,INTRAMUSCULAR,2
  8,2023-01-29 00:00:00,CORTICOSTEROID,,3
  8,2023-01-31 00:00:00,ANTIBIOTIC,ORAL,3
  8,2023-02-05 00:00:00,ANTIBIOTIC,ORAL,3
  8,2023-04-03 00:00:00,PAIN_RELIEVER,INHALATION,2
  8,2023-09-03 12:00:00,ANTICOAGULANT,INHALATION,2
  8,2023-09-23 00:00:00,PAIN_RELIEVER,CUTANEOUS,3
  8,2023-10-25 12:00:00,CORTICOSTEROID,ORAL,3
  9,2023-05-01 00:00:00,ANTICOAGULANT,INTRAMUSCULAR,3
  9,2023-05-15 00:00:00,ANTIBIOTIC,ORAL,1
  9,2023-08-05 00:00:00,PAIN_RELIEVER,INTRAVENOUS,1
  9,2023-09-28 00:00:00,ANTIBIOTIC,CUTANEOUS,3
  10,2023-03-25 12:00:00,ANTICOAGULANT,INTRAVENOUS,2
  10,2023-04-17 00:00:00,ANTICOAGULANT,INTRAMUSCULAR,2
  10,2023-04-20 00:00:00,ANTIBIOTIC,INTRAVENOUS,3
  10,2023-08-20 12:00:00,ANTIHYPERTENSIVE,INHALATION,2
  
  '''
# ---
# name: TestConversionMethods.test_as_event_anchor_middle[state]
  '''
  patient_id,time,health_state,condition
  1,2023-06-24 12:00:00,HEALTHY,DIGESTIVE
  1,2023-12-23 12:00:00,HEALTHY,
  2,2023-06-24 12:00:00,HEALTHY,CARDIAC
  2,2023-12-23 12:00:00,CHRONIC_MONITORING,CARDIAC
  3,2023-02-17 00:00:00,CONVALESCENCE,CARDIAC
  3,2023-08-10 00:00:00,CHRONIC_MONITORING,NEUROLOGICAL
  3,2023-12-23 00:00:00,REMISSION,CARDIAC
  4,2023-03-21 00:00:00,CHRONIC_MONITORING,NEUROLOGICAL
  4,2023-06-28 00:00:00,CONVALESCENCE,
  4,2023-09-30 12:00:00,REMISSION,DIGESTIVE
  4,2023-12-22 12:00:00,CONVALESCENCE,
  5,2023-06-24 12:00:00,CONVALESCENCE,DIGESTIVE
  5,2023-12-23 12:00:00,CHRONIC_MONITORING,DIGESTIVE
  6,2023-02-03 12:00:00,REMISSION,DIGESTIVE
  6,2023-05-28 00:00:00,TREATMENT,RESPIRATORY
  6,2023-10-15 00:00:00,TREATMENT,DIGESTIVE
  6,2023-12-22 12:00:00,CONVALESCENCE,DIGESTIVE
  7,2023-03-15 12:00:00,HEALTHY,RESPIRATORY
  7,2023-06-23 00:00:00,TREATMENT,NEUROLOGICAL
  7,2023-10-01 00:00:00,HEALTHY,DIGESTIVE
  7,2023-12-22 12:00:00,REMISSION,RESPIRATORY
  8,2023-06-24 12:00:00,CONVALESCENCE,RESPIRATORY
  8,2023-12-23 12:00:00,TREATMENT,
  9,2023-06-24 12:00:00,CONVALESCENCE,DIGESTIVE
  9,2023-12-23 12:00:00,HEALTHY,
  10,2023-06-24 12:00:00,HEALTHY,DIGESTIVE
  10,2023-12-23 12:00:00,CHRONIC_MONITORING,NEUROLOGICAL
  
  '''
# ---
# name: TestConversionMethods.test_as_event_anchor_start[event]
  '''
  patient_id,date,event_type,provider
  1,2023-01-21,EXAM,NURSE
  1,2023-01-22,FOLLOW_UP,RADIOLOGIST
  1,2023-02-28,EXAM,
  1,2023-03-29,FOLLOW_UP,RADIOLOGIST
  1,2023-06-10,VACCINATION,
  1,2023-07-11,VACCINATION,LABORATORY
  1,2023-08-03,EMERGENCY,NURSE
  1,2023-09-15,VACCINATION,SPECIALIST
  1,2023-12-11,CONSULTATION,NURSE
  1,2023-12-15,EMERGENCY,
  1,2023-12-26,EMERGENCY,
  2,2023-02-19,VACCINATION,SPECIALIST
  2,2023-02-23,EXAM,RADIOLOGIST
  2,2023-02-24,VACCINATION,GENERAL_PRACTITIONER
  2,2023-03-30,VACCINATION,SPECIALIST
  2,2023-05-11,FOLLOW_UP,NURSE
  2,2023-05-15,FOLLOW_UP,GENERAL_PRACTITIONER
  2,2023-06-16,EXAM,RADIOLOGIST
  2,2023-07-09,FOLLOW_UP,
  2,2023-07-21,VACCINATION,
  2,2023-08-06,VACCINATION,SPECIALIST
  2,2023-09-21,EMERGENCY,GENERAL_PRACTITIONER
  2,2023-09-22,EXAM,LABORATORY
  2,2023-09-28,EMERGENCY,RADIOLOGIST
  2,2023-11-06,FOLLOW_UP,SPECIALIST
  2,2023-12-04,FOLLOW_UP,SPECIALIST
  2,2023-12-06,VACCINATION,RADIOLOGIST
  3,2023-01-28,CONSULTATION,RADIOLOGIST
  3,2023-02-02,FOLLOW_UP,NURSE
  3,2023-02-10,FOLLOW_UP,LABORATORY
  3,2023-03-06,CONSULTATION,
  3,2023-03-22,EMERGENCY,
  3,2023-05-16,EMERGENCY,NURSE
  3,2023-06-21,EMERGENCY,NURSE
  3,2023-08-15,FOLLOW_UP,NURSE
  3,2023-08-19,EXAM,GENERAL_PRACTITIONER
  3,2023-09-09,VACCINATION,RADIOLOGIST
  3,2023-09-14,FOLLOW_UP,SPECIALIST
  3,2023-10-16,EMERGENCY,LABORATORY
  3,2023-12-10,CONSULTATION,RADIOLOGIST
  4,2023-01-29,VACCINATION,LABORATORY
  4,2023-03-27,VACCINATION,SPECIALIST
  4,2023-04-06,VACCINATION,LABORATORY
  4,2023-04-18,VACCINATION,RADIOLOGIST
  4,2023-05-14,VACCINATION,RADIOLOGIST
  4,2023-06-09,EMERGENCY,NURSE
  4,2023-06-19,FOLLOW_UP,GENERAL_PRACTITIONER
  4,2023-06-28,CONSULTATION,RADIOLOGIST
  4,2023-07-26,EXAM,SPECIALIST
  4,2023-08-19,FOLLOW_UP,NURSE
  4,2023-09-12,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-01-02,EXAM,
  5,2023-02-21,VACCINATION,SPECIALIST
  5,2023-02-23,FOLLOW_UP,
  5,2023-03-22,EMERGENCY,
  5,2023-04-08,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-04-23,FOLLOW_UP,GENERAL_PRACTITIONER
  5,2023-05-06,EXAM,LABORATORY
  5,2023-05-17,FOLLOW_UP,
  5,2023-06-01,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-06-21,EXAM,RADIOLOGIST
  5,2023-06-29,CONSULTATION,GENERAL_PRACTITIONER
  5,2023-07-22,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-08-19,CONSULTATION,GENERAL_PRACTITIONER
  5,2023-08-21,EMERGENCY,NURSE
  5,2023-09-12,FOLLOW_UP,RADIOLOGIST
  5,2023-10-10,CONSULTATION,
  5,2023-11-03,EXAM,RADIOLOGIST
  5,2023-11-27,EXAM,RADIOLOGIST
  6,2023-02-06,EMERGENCY,GENERAL_PRACTITIONER
  6,2023-03-01,CONSULTATION,SPECIALIST
  6,2023-04-22,CONSULTATION,RADIOLOGIST
  6,2023-05-04,EMERGENCY,LABORATORY
  6,2023-05-08,EXAM,
  6,2023-05-28,VACCINATION,GENERAL_PRACTITIONER
  6,2023-05-31,EXAM,
  6,2023-08-21,EMERGENCY,NURSE
  6,2023-09-16,VACCINATION,RADIOLOGIST
  6,2023-09-20,VACCINATION,SPECIALIST
  6,2023-09-24,VACCINATION,GENERAL_PRACTITIONER
  6,2023-10-31,VACCINATION,LABORATORY
  6,2023-12-12,EMERGENCY,NURSE
  7,2023-03-16,CONSULTATION,RADIOLOGIST
  7,2023-04-14,VACCINATION,NURSE
  7,2023-04-22,CONSULTATION,NURSE
  7,2023-06-01,CONSULTATION,RADIOLOGIST
  7,2023-06-02,FOLLOW_UP,SPECIALIST
  7,2023-07-27,FOLLOW_UP,GENERAL_PRACTITIONER
  7,2023-12-04,EXAM,
  8,2023-01-22,FOLLOW_UP,NURSE
  8,2023-05-08,CONSULTATION,
  8,2023-06-10,VACCINATION,
  8,2023-08-14,FOLLOW_UP,GENERAL_PRACTITIONER
  8,2023-09-21,EMERGENCY,
  8,2023-10-04,VACCINATION,NURSE
  8,2023-10-11,CONSULTATION,LABORATORY
  8,2023-11-13,EMERGENCY,
  9,2023-02-15,FOLLOW_UP,NURSE
  9,2023-06-21,VACCINATION,LABORATORY
  9,2023-07-07,CONSULTATION,RADIOLOGIST
  9,2023-07-10,FOLLOW_UP,LABORATORY
  9,2023-07-11,CONSULTATION,GENERAL_PRACTITIONER
  9,2023-08-21,FOLLOW_UP,LABORATORY
  9,2023-10-29,FOLLOW_UP,NURSE
  10,2023-02-05,FOLLOW_UP,RADIOLOGIST
  10,2023-05-07,EMERGENCY,SPECIALIST
  10,2023-06-10,EMERGENCY,SPECIALIST
  10,2023-09-04,EXAM,NURSE
  10,2023-09-30,CONSULTATION,GENERAL_PRACTITIONER
  10,2023-10-08,EXAM,SPECIALIST
  10,2023-10-26,FOLLOW_UP,SPECIALIST
  10,2023-11-02,CONSULTATION,LABORATORY
  10,2023-11-12,EXAM,GENERAL_PRACTITIONER
  10,2023-11-17,VACCINATION,NURSE
  10,2023-11-19,EXAM,SPECIALIST
  
  '''
# ---
# name: TestConversionMethods.test_as_event_anchor_start[interval]
  '''
  patient_id,time,medication,administration_route,dosage
  1,2023-01-08,PAIN_RELIEVER,,2
  1,2023-01-12,ANTICOAGULANT,CUTANEOUS,1
  1,2023-01-20,ANTIBIOTIC,ORAL,2
  1,2023-05-23,ANTIHYPERTENSIVE,INTRAVENOUS,3
  1,2023-09-09,ANTICOAGULANT,INTRAVENOUS,3
  2,2023-01-05,ANTIBIOTIC,ORAL,2
  2,2023-01-10,PAIN_RELIEVER,,1
  2,2023-02-04,PAIN_RELIEVER,INTRAVENOUS,1
  2,2023-05-25,ANTIBIOTIC,INHALATION,1
  2,2023-08-08,ANTIBIOTIC,CUTANEOUS,3
  2,2023-08-08,ANTIHYPERTENSIVE,INHALATION,2
  3,2023-04-15,ANTIBIOTIC,INHALATION,3
  3,2023-09-24,PAIN_RELIEVER,ORAL,2
  3,2023-10-10,ANTIHYPERTENSIVE,ORAL,2
  4,2023-02-22,PAIN_RELIEVER,INTRAMUSCULAR,3
  4,2023-05-25,ANTIBIOTIC,ORAL,3
  4,2023-06-11,CORTICOSTEROID,INTRAVENOUS,2
  4,2023-06-22,ANTICOAGULANT,ORAL,1
  4,2023-07-16,CORTICOSTEROID,INHALATION,3
  4,2023-10-15,ANTICOAGULANT,INTRAMUSCULAR,2
  5,2023-02-23,ANTIHYPERTENSIVE,INTRAVENOUS,1
  5,2023-03-07,CORTICOSTEROID,CUTANEOUS,2
  5,2023-04-22,ANTIHYPERTENSIVE,INHALATION,2
  5,2023-09-04,CORTICOSTEROID,,1
  5,2023-09-06,ANTIBIOTIC,CUTANEOUS,2
  5,2023-10-21,PAIN_RELIEVER,INTRAMUSCULAR,2
  6,2023-03-02,CORTICOSTEROID,INHALATION,1
  6,2023-03-10,ANTIHYPERTENSIVE,INTRAMUSCULAR,1
  6,2023-04-02,ANTIHYPERTENSIVE,INHALATION,2
  6,2023-04-21,CORTICOSTEROID,CUTANEOUS,1
  6,2023-05-06,CORTICOSTEROID,INTRAVENOUS,3
  6,2023-05-18,ANTIBIOTIC,INTRAMUSCULAR,1
  6,2023-07-14,CORTICOSTEROID,INHALATION,2
  7,2023-02-03,PAIN_RELIEVER,INHALATION,3
  7,2023-03-14,ANTIBIOTIC,,3
  7,2023-05-13,ANTICOAGULANT,INTRAMUSCULAR,2
  8,2023-01-14,CORTICOSTEROID,,3
  8,2023-01-26,ANTIBIOTIC,ORAL,3
  8,2023-01-28,ANTIBIOTIC,ORAL,3
  8,2023-03-19,PAIN_RELIEVER,INHALATION,2
  8,2023-08-26,ANTICOAGULANT,INHALATION,2
  8,2023-09-10,PAIN_RELIEVER,CUTANEOUS,3
  8,2023-10-21,CORTICOSTEROID,ORAL,3
  9,2023-04-19,ANTICOAGULANT,INTRAMUSCULAR,3
  9,2023-05-06,ANTIBIOTIC,ORAL,1
  9,2023-07-31,PAIN_RELIEVER,INTRAVENOUS,1
  9,2023-09-21,ANTIBIOTIC,CUTANEOUS,3
  10,2023-03-11,ANTICOAGULANT,INTRAVENOUS,2
  10,2023-04-05,ANTIBIOTIC,INTRAVENOUS,3
  10,2023-04-11,ANTICOAGULANT,INTRAMUSCULAR,2
  10,2023-08-17,ANTIHYPERTENSIVE,INHALATION,2
  
  '''
# ---
# name: TestConversionMethods.test_as_event_anchor_start[state]
  '''
  patient_id,time,health_state,condition
  1,2023-01-01,HEALTHY,DIGESTIVE
  1,2023-12-16,HEALTHY,
  2,2023-01-01,HEALTHY,CARDIAC
  2,2023-12-16,CHRONIC_MONITORING,CARDIAC
  3,2023-01-01,CONVALESCENCE,CARDIAC
  3,2023-04-05,CHRONIC_MONITORING,NEUROLOGICAL
  3,2023-12-15,REMISSION,CARDIAC
  4,2023-01-01,CHRONIC_MONITORING,NEUROLOGICAL
  4,2023-06-08,CONVALESCENCE,
  4,2023-07-18,REMISSION,DIGESTIVE
  4,2023-12-14,CONVALESCENCE,
  5,2023-01-01,CONVALESCENCE,DIGESTIVE
  5,2023-12-16,CHRONIC_MONITORING,DIGESTIVE
  6,2023-01-01,REMISSION,DIGESTIVE
  6,2023-03-09,TREATMENT,RESPIRATORY
  6,2023-08-16,TREATMENT,DIGESTIVE
  6,2023-12-14,CONVALESCENCE,DIGESTIVE
  7,2023-01-01,HEALTHY,RESPIRATORY
  7,2023-05-28,TREATMENT,NEUROLOGICAL
  7,2023-07-19,HEALTHY,DIGESTIVE
  7,2023-12-14,REMISSION,RESPIRATORY
  8,2023-01-01,CONVALESCENCE,RESPIRATORY
  8,2023-12-16,TREATMENT,
  9,2023-01-01,CONVALESCENCE,DIGESTIVE
  9,2023-12-16,HEALTHY,
  10,2023-01-01,HEALTHY,DIGESTIVE
  10,2023-12-16,CHRONIC_MONITORING,NEUROLOGICAL
  
  '''
# ---
# name: TestConversionMethods.test_as_interval_custom_columns[interval]
  '''
  patient_id,start_date,end_date,medication,administration_route,dosage
  1,2023-01-08,2023-01-18,PAIN_RELIEVER,,2
  1,2023-01-12,2023-01-28,ANTICOAGULANT,CUTANEOUS,1
  1,2023-01-20,2023-02-13,ANTIBIOTIC,ORAL,2
  1,2023-05-23,2023-05-30,ANTIHYPERTENSIVE,INTRAVENOUS,3
  1,2023-09-09,2023-09-20,ANTICOAGULANT,INTRAVENOUS,3
  2,2023-01-05,2023-02-03,ANTIBIOTIC,ORAL,2
  2,2023-01-10,2023-02-09,PAIN_RELIEVER,,1
  2,2023-02-04,2023-02-16,PAIN_RELIEVER,INTRAVENOUS,1
  2,2023-05-25,2023-06-09,ANTIBIOTIC,INHALATION,1
  2,2023-08-08,2023-08-19,ANTIBIOTIC,CUTANEOUS,3
  2,2023-08-08,2023-08-30,ANTIHYPERTENSIVE,INHALATION,2
  3,2023-04-15,2023-04-24,ANTIBIOTIC,INHALATION,3
  3,2023-09-24,2023-10-21,PAIN_RELIEVER,ORAL,2
  3,2023-10-10,2023-11-02,ANTIHYPERTENSIVE,ORAL,2
  4,2023-02-22,2023-03-05,PAIN_RELIEVER,INTRAMUSCULAR,3
  4,2023-05-25,2023-06-21,ANTIBIOTIC,ORAL,3
  4,2023-06-11,2023-07-09,CORTICOSTEROID,INTRAVENOUS,2
  4,2023-06-22,2023-07-11,ANTICOAGULANT,ORAL,1
  4,2023-07-16,2023-07-27,CORTICOSTEROID,INHALATION,3
  4,2023-10-15,2023-10-23,ANTICOAGULANT,INTRAMUSCULAR,2
  5,2023-02-23,2023-03-13,ANTIHYPERTENSIVE,INTRAVENOUS,1
  5,2023-03-07,2023-03-24,CORTICOSTEROID,CUTANEOUS,2
  5,2023-04-22,2023-05-13,ANTIHYPERTENSIVE,INHALATION,2
  5,2023-09-04,2023-09-20,CORTICOSTEROID,,1
  5,2023-09-06,2023-09-18,ANTIBIOTIC,CUTANEOUS,2
  5,2023-10-21,2023-11-14,PAIN_RELIEVER,INTRAMUSCULAR,2
  6,2023-03-02,2023-03-27,CORTICOSTEROID,INHALATION,1
  6,2023-03-10,2023-03-18,ANTIHYPERTENSIVE,INTRAMUSCULAR,1
  6,2023-04-02,2023-04-18,ANTIHYPERTENSIVE,INHALATION,2
  6,2023-04-21,2023-05-20,CORTICOSTEROID,CUTANEOUS,1
  6,2023-05-06,2023-05-23,CORTICOSTEROID,INTRAVENOUS,3
  6,2023-05-18,2023-06-17,ANTIBIOTIC,INTRAMUSCULAR,1
  6,2023-07-14,2023-07-23,CORTICOSTEROID,INHALATION,2
  7,2023-02-03,2023-02-26,PAIN_RELIEVER,INHALATION,3
  7,2023-03-14,2023-04-04,ANTIBIOTIC,,3
  7,2023-05-13,2023-05-28,ANTICOAGULANT,INTRAMUSCULAR,2
  8,2023-01-14,2023-02-13,CORTICOSTEROID,,3
  8,2023-01-26,2023-02-05,ANTIBIOTIC,ORAL,3
  8,2023-01-28,2023-02-13,ANTIBIOTIC,ORAL,3
  8,2023-03-19,2023-04-18,PAIN_RELIEVER,INHALATION,2
  8,2023-08-26,2023-09-12,ANTICOAGULANT,INHALATION,2
  8,2023-09-10,2023-10-06,PAIN_RELIEVER,CUTANEOUS,3
  8,2023-10-21,2023-10-30,CORTICOSTEROID,ORAL,3
  9,2023-04-19,2023-05-13,ANTICOAGULANT,INTRAMUSCULAR,3
  9,2023-05-06,2023-05-24,ANTIBIOTIC,ORAL,1
  9,2023-07-31,2023-08-10,PAIN_RELIEVER,INTRAVENOUS,1
  9,2023-09-21,2023-10-05,ANTIBIOTIC,CUTANEOUS,3
  10,2023-03-11,2023-04-09,ANTICOAGULANT,INTRAVENOUS,2
  10,2023-04-05,2023-05-05,ANTIBIOTIC,INTRAVENOUS,3
  10,2023-04-11,2023-04-23,ANTICOAGULANT,INTRAMUSCULAR,2
  10,2023-08-17,2023-08-24,ANTIHYPERTENSIVE,INHALATION,2
  
  '''
# ---
# name: TestConversionMethods.test_as_interval_custom_columns[state]
  '''
  patient_id,begin,finish,health_state,condition
  1,2023-01-01,2023-12-16,HEALTHY,DIGESTIVE
  1,2023-12-16,2023-12-31,HEALTHY,
  2,2023-01-01,2023-12-16,HEALTHY,CARDIAC
  2,2023-12-16,2023-12-31,CHRONIC_MONITORING,CARDIAC
  3,2023-01-01,2023-04-05,CONVALESCENCE,CARDIAC
  3,2023-04-05,2023-12-15,CHRONIC_MONITORING,NEUROLOGICAL
  3,2023-12-15,2023-12-31,REMISSION,CARDIAC
  4,2023-01-01,2023-06-08,CHRONIC_MONITORING,NEUROLOGICAL
  4,2023-06-08,2023-07-18,CONVALESCENCE,
  4,2023-07-18,2023-12-14,REMISSION,DIGESTIVE
  4,2023-12-14,2023-12-31,CONVALESCENCE,
  5,2023-01-01,2023-12-16,CONVALESCENCE,DIGESTIVE
  5,2023-12-16,2023-12-31,CHRONIC_MONITORING,DIGESTIVE
  6,2023-01-01,2023-03-09,REMISSION,DIGESTIVE
  6,2023-03-09,2023-08-16,TREATMENT,RESPIRATORY
  6,2023-08-16,2023-12-14,TREATMENT,DIGESTIVE
  6,2023-12-14,2023-12-31,CONVALESCENCE,DIGESTIVE
  7,2023-01-01,2023-05-28,HEALTHY,RESPIRATORY
  7,2023-05-28,2023-07-19,TREATMENT,NEUROLOGICAL
  7,2023-07-19,2023-12-14,HEALTHY,DIGESTIVE
  7,2023-12-14,2023-12-31,REMISSION,RESPIRATORY
  8,2023-01-01,2023-12-16,CONVALESCENCE,RESPIRATORY
  8,2023-12-16,2023-12-31,TREATMENT,
  9,2023-01-01,2023-12-16,CONVALESCENCE,DIGESTIVE
  9,2023-12-16,2023-12-31,HEALTHY,
  10,2023-01-01,2023-12-16,HEALTHY,DIGESTIVE
  10,2023-12-16,2023-12-31,CHRONIC_MONITORING,NEUROLOGICAL
  
  '''
# ---
# name: TestConversionMethods.test_as_interval_identity[interval]
  '''
  patient_id,start_date,end_date,medication,administration_route,dosage
  1,2023-01-08,2023-01-18,PAIN_RELIEVER,,2
  1,2023-01-12,2023-01-28,ANTICOAGULANT,CUTANEOUS,1
  1,2023-01-20,2023-02-13,ANTIBIOTIC,ORAL,2
  1,2023-05-23,2023-05-30,ANTIHYPERTENSIVE,INTRAVENOUS,3
  1,2023-09-09,2023-09-20,ANTICOAGULANT,INTRAVENOUS,3
  2,2023-01-05,2023-02-03,ANTIBIOTIC,ORAL,2
  2,2023-01-10,2023-02-09,PAIN_RELIEVER,,1
  2,2023-02-04,2023-02-16,PAIN_RELIEVER,INTRAVENOUS,1
  2,2023-05-25,2023-06-09,ANTIBIOTIC,INHALATION,1
  2,2023-08-08,2023-08-19,ANTIBIOTIC,CUTANEOUS,3
  2,2023-08-08,2023-08-30,ANTIHYPERTENSIVE,INHALATION,2
  3,2023-04-15,2023-04-24,ANTIBIOTIC,INHALATION,3
  3,2023-09-24,2023-10-21,PAIN_RELIEVER,ORAL,2
  3,2023-10-10,2023-11-02,ANTIHYPERTENSIVE,ORAL,2
  4,2023-02-22,2023-03-05,PAIN_RELIEVER,INTRAMUSCULAR,3
  4,2023-05-25,2023-06-21,ANTIBIOTIC,ORAL,3
  4,2023-06-11,2023-07-09,CORTICOSTEROID,INTRAVENOUS,2
  4,2023-06-22,2023-07-11,ANTICOAGULANT,ORAL,1
  4,2023-07-16,2023-07-27,CORTICOSTEROID,INHALATION,3
  4,2023-10-15,2023-10-23,ANTICOAGULANT,INTRAMUSCULAR,2
  5,2023-02-23,2023-03-13,ANTIHYPERTENSIVE,INTRAVENOUS,1
  5,2023-03-07,2023-03-24,CORTICOSTEROID,CUTANEOUS,2
  5,2023-04-22,2023-05-13,ANTIHYPERTENSIVE,INHALATION,2
  5,2023-09-04,2023-09-20,CORTICOSTEROID,,1
  5,2023-09-06,2023-09-18,ANTIBIOTIC,CUTANEOUS,2
  5,2023-10-21,2023-11-14,PAIN_RELIEVER,INTRAMUSCULAR,2
  6,2023-03-02,2023-03-27,CORTICOSTEROID,INHALATION,1
  6,2023-03-10,2023-03-18,ANTIHYPERTENSIVE,INTRAMUSCULAR,1
  6,2023-04-02,2023-04-18,ANTIHYPERTENSIVE,INHALATION,2
  6,2023-04-21,2023-05-20,CORTICOSTEROID,CUTANEOUS,1
  6,2023-05-06,2023-05-23,CORTICOSTEROID,INTRAVENOUS,3
  6,2023-05-18,2023-06-17,ANTIBIOTIC,INTRAMUSCULAR,1
  6,2023-07-14,2023-07-23,CORTICOSTEROID,INHALATION,2
  7,2023-02-03,2023-02-26,PAIN_RELIEVER,INHALATION,3
  7,2023-03-14,2023-04-04,ANTIBIOTIC,,3
  7,2023-05-13,2023-05-28,ANTICOAGULANT,INTRAMUSCULAR,2
  8,2023-01-14,2023-02-13,CORTICOSTEROID,,3
  8,2023-01-26,2023-02-05,ANTIBIOTIC,ORAL,3
  8,2023-01-28,2023-02-13,ANTIBIOTIC,ORAL,3
  8,2023-03-19,2023-04-18,PAIN_RELIEVER,INHALATION,2
  8,2023-08-26,2023-09-12,ANTICOAGULANT,INHALATION,2
  8,2023-09-10,2023-10-06,PAIN_RELIEVER,CUTANEOUS,3
  8,2023-10-21,2023-10-30,CORTICOSTEROID,ORAL,3
  9,2023-04-19,2023-05-13,ANTICOAGULANT,INTRAMUSCULAR,3
  9,2023-05-06,2023-05-24,ANTIBIOTIC,ORAL,1
  9,2023-07-31,2023-08-10,PAIN_RELIEVER,INTRAVENOUS,1
  9,2023-09-21,2023-10-05,ANTIBIOTIC,CUTANEOUS,3
  10,2023-03-11,2023-04-09,ANTICOAGULANT,INTRAVENOUS,2
  10,2023-04-05,2023-05-05,ANTIBIOTIC,INTRAVENOUS,3
  10,2023-04-11,2023-04-23,ANTICOAGULANT,INTRAMUSCULAR,2
  10,2023-08-17,2023-08-24,ANTIHYPERTENSIVE,INHALATION,2
  
  '''
# ---
# name: TestConversionMethods.test_as_interval_identity[state]
  '''
  patient_id,start,end,health_state,condition
  1,2023-01-01,2023-12-16,HEALTHY,DIGESTIVE
  1,2023-12-16,2023-12-31,HEALTHY,
  2,2023-01-01,2023-12-16,HEALTHY,CARDIAC
  2,2023-12-16,2023-12-31,CHRONIC_MONITORING,CARDIAC
  3,2023-01-01,2023-04-05,CONVALESCENCE,CARDIAC
  3,2023-04-05,2023-12-15,CHRONIC_MONITORING,NEUROLOGICAL
  3,2023-12-15,2023-12-31,REMISSION,CARDIAC
  4,2023-01-01,2023-06-08,CHRONIC_MONITORING,NEUROLOGICAL
  4,2023-06-08,2023-07-18,CONVALESCENCE,
  4,2023-07-18,2023-12-14,REMISSION,DIGESTIVE
  4,2023-12-14,2023-12-31,CONVALESCENCE,
  5,2023-01-01,2023-12-16,CONVALESCENCE,DIGESTIVE
  5,2023-12-16,2023-12-31,CHRONIC_MONITORING,DIGESTIVE
  6,2023-01-01,2023-03-09,REMISSION,DIGESTIVE
  6,2023-03-09,2023-08-16,TREATMENT,RESPIRATORY
  6,2023-08-16,2023-12-14,TREATMENT,DIGESTIVE
  6,2023-12-14,2023-12-31,CONVALESCENCE,DIGESTIVE
  7,2023-01-01,2023-05-28,HEALTHY,RESPIRATORY
  7,2023-05-28,2023-07-19,TREATMENT,NEUROLOGICAL
  7,2023-07-19,2023-12-14,HEALTHY,DIGESTIVE
  7,2023-12-14,2023-12-31,REMISSION,RESPIRATORY
  8,2023-01-01,2023-12-16,CONVALESCENCE,RESPIRATORY
  8,2023-12-16,2023-12-31,TREATMENT,
  9,2023-01-01,2023-12-16,CONVALESCENCE,DIGESTIVE
  9,2023-12-16,2023-12-31,HEALTHY,
  10,2023-01-01,2023-12-16,HEALTHY,DIGESTIVE
  10,2023-12-16,2023-12-31,CHRONIC_MONITORING,NEUROLOGICAL
  
  '''
# ---
# name: TestConversionMethods.test_event_to_interval_duration_column
  '''
  patient_id,start,end,event_type,location,duration_hours
  101,2023-06-01 09:00:00,2023-06-01 11:30:00,admission,Emergency,0 days 02:30:00
  101,2023-06-01 14:00:00,2023-06-01 15:30:00,procedure,Surgery,0 days 01:30:00
  101,2023-06-02 10:00:00,,discharge,Discharge,
  102,2023-06-01 10:30:00,2023-06-01 13:30:00,admission,Emergency,0 days 03:00:00
  102,2023-06-01 18:00:00,2023-06-01 19:00:00,procedure,Radiology,0 days 01:00:00
  103,2023-06-01 11:00:00,2023-06-01 13:00:00,admission,Emergency,0 days 02:00:00
  103,2023-06-01 15:30:00,2023-06-01 18:00:00,procedure,Surgery,0 days 02:30:00
  
  '''
# ---
# name: TestConversionMethods.test_event_to_interval_fixed_duration[duration0]
  '''
  patient_id,start,end,event_type,provider
  1,2023-01-21,2023-01-21 06:00:00,EXAM,NURSE
  1,2023-01-22,2023-01-22 06:00:00,FOLLOW_UP,RADIOLOGIST
  1,2023-02-28,2023-02-28 06:00:00,EXAM,
  1,2023-03-29,2023-03-29 06:00:00,FOLLOW_UP,RADIOLOGIST
  1,2023-06-10,2023-06-10 06:00:00,VACCINATION,
  1,2023-07-11,2023-07-11 06:00:00,VACCINATION,LABORATORY
  1,2023-08-03,2023-08-03 06:00:00,EMERGENCY,NURSE
  1,2023-09-15,2023-09-15 06:00:00,VACCINATION,SPECIALIST
  1,2023-12-11,2023-12-11 06:00:00,CONSULTATION,NURSE
  1,2023-12-15,2023-12-15 06:00:00,EMERGENCY,
  1,2023-12-26,2023-12-26 06:00:00,EMERGENCY,
  2,2023-02-19,2023-02-19 06:00:00,VACCINATION,SPECIALIST
  2,2023-02-23,2023-02-23 06:00:00,EXAM,RADIOLOGIST
  2,2023-02-24,2023-02-24 06:00:00,VACCINATION,GENERAL_PRACTITIONER
  2,2023-03-30,2023-03-30 06:00:00,VACCINATION,SPECIALIST
  2,2023-05-11,2023-05-11 06:00:00,FOLLOW_UP,NURSE
  2,2023-05-15,2023-05-15 06:00:00,FOLLOW_UP,GENERAL_PRACTITIONER
  2,2023-06-16,2023-06-16 06:00:00,EXAM,RADIOLOGIST
  2,2023-07-09,2023-07-09 06:00:00,FOLLOW_UP,
  2,2023-07-21,2023-07-21 06:00:00,VACCINATION,
  2,2023-08-06,2023-08-06 06:00:00,VACCINATION,SPECIALIST
  2,2023-09-21,2023-09-21 06:00:00,EMERGENCY,GENERAL_PRACTITIONER
  2,2023-09-22,2023-09-22 06:00:00,EXAM,LABORATORY
  2,2023-09-28,2023-09-28 06:00:00,EMERGENCY,RADIOLOGIST
  2,2023-11-06,2023-11-06 06:00:00,FOLLOW_UP,SPECIALIST
  2,2023-12-04,2023-12-04 06:00:00,FOLLOW_UP,SPECIALIST
  2,2023-12-06,2023-12-06 06:00:00,VACCINATION,RADIOLOGIST
  3,2023-01-28,2023-01-28 06:00:00,CONSULTATION,RADIOLOGIST
  3,2023-02-02,2023-02-02 06:00:00,FOLLOW_UP,NURSE
  3,2023-02-10,2023-02-10 06:00:00,FOLLOW_UP,LABORATORY
  3,2023-03-06,2023-03-06 06:00:00,CONSULTATION,
  3,2023-03-22,2023-03-22 06:00:00,EMERGENCY,
  3,2023-05-16,2023-05-16 06:00:00,EMERGENCY,NURSE
  3,2023-06-21,2023-06-21 06:00:00,EMERGENCY,NURSE
  3,2023-08-15,2023-08-15 06:00:00,FOLLOW_UP,NURSE
  3,2023-08-19,2023-08-19 06:00:00,EXAM,GENERAL_PRACTITIONER
  3,2023-09-09,2023-09-09 06:00:00,VACCINATION,RADIOLOGIST
  3,2023-09-14,2023-09-14 06:00:00,FOLLOW_UP,SPECIALIST
  3,2023-10-16,2023-10-16 06:00:00,EMERGENCY,LABORATORY
  3,2023-12-10,2023-12-10 06:00:00,CONSULTATION,RADIOLOGIST
  4,2023-01-29,2023-01-29 06:00:00,VACCINATION,LABORATORY
  4,2023-03-27,2023-03-27 06:00:00,VACCINATION,SPECIALIST
  4,2023-04-06,2023-04-06 06:00:00,VACCINATION,LABORATORY
  4,2023-04-18,2023-04-18 06:00:00,VACCINATION,RADIOLOGIST
  4,2023-05-14,2023-05-14 06:00:00,VACCINATION,RADIOLOGIST
  4,2023-06-09,2023-06-09 06:00:00,EMERGENCY,NURSE
  4,2023-06-19,2023-06-19 06:00:00,FOLLOW_UP,GENERAL_PRACTITIONER
  4,2023-06-28,2023-06-28 06:00:00,CONSULTATION,RADIOLOGIST
  4,2023-07-26,2023-07-26 06:00:00,EXAM,SPECIALIST
  4,2023-08-19,2023-08-19 06:00:00,FOLLOW_UP,NURSE
  4,2023-09-12,2023-09-12 06:00:00,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-01-02,2023-01-02 06:00:00,EXAM,
  5,2023-02-21,2023-02-21 06:00:00,VACCINATION,SPECIALIST
  5,2023-02-23,2023-02-23 06:00:00,FOLLOW_UP,
  5,2023-03-22,2023-03-22 06:00:00,EMERGENCY,
  5,2023-04-08,2023-04-08 06:00:00,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-04-23,2023-04-23 06:00:00,FOLLOW_UP,GENERAL_PRACTITIONER
  5,2023-05-06,2023-05-06 06:00:00,EXAM,LABORATORY
  5,2023-05-17,2023-05-17 06:00:00,FOLLOW_UP,
  5,2023-06-01,2023-06-01 06:00:00,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-06-21,2023-06-21 06:00:00,EXAM,RADIOLOGIST
  5,2023-06-29,2023-06-29 06:00:00,CONSULTATION,GENERAL_PRACTITIONER
  5,2023-07-22,2023-07-22 06:00:00,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-08-19,2023-08-19 06:00:00,CONSULTATION,GENERAL_PRACTITIONER
  5,2023-08-21,2023-08-21 06:00:00,EMERGENCY,NURSE
  5,2023-09-12,2023-09-12 06:00:00,FOLLOW_UP,RADIOLOGIST
  5,2023-10-10,2023-10-10 06:00:00,CONSULTATION,
  5,2023-11-03,2023-11-03 06:00:00,EXAM,RADIOLOGIST
  5,2023-11-27,2023-11-27 06:00:00,EXAM,RADIOLOGIST
  6,2023-02-06,2023-02-06 06:00:00,EMERGENCY,GENERAL_PRACTITIONER
  6,2023-03-01,2023-03-01 06:00:00,CONSULTATION,SPECIALIST
  6,2023-04-22,2023-04-22 06:00:00,CONSULTATION,RADIOLOGIST
  6,2023-05-04,2023-05-04 06:00:00,EMERGENCY,LABORATORY
  6,2023-05-08,2023-05-08 06:00:00,EXAM,
  6,2023-05-28,2023-05-28 06:00:00,VACCINATION,GENERAL_PRACTITIONER
  6,2023-05-31,2023-05-31 06:00:00,EXAM,
  6,2023-08-21,2023-08-21 06:00:00,EMERGENCY,NURSE
  6,2023-09-16,2023-09-16 06:00:00,VACCINATION,RADIOLOGIST
  6,2023-09-20,2023-09-20 06:00:00,VACCINATION,SPECIALIST
  6,2023-09-24,2023-09-24 06:00:00,VACCINATION,GENERAL_PRACTITIONER
  6,2023-10-31,2023-10-31 06:00:00,VACCINATION,LABORATORY
  6,2023-12-12,2023-12-12 06:00:00,EMERGENCY,NURSE
  7,2023-03-16,2023-03-16 06:00:00,CONSULTATION,RADIOLOGIST
  7,2023-04-14,2023-04-14 06:00:00,VACCINATION,NURSE
  7,2023-04-22,2023-04-22 06:00:00,CONSULTATION,NURSE
  7,2023-06-01,2023-06-01 06:00:00,CONSULTATION,RADIOLOGIST
  7,2023-06-02,2023-06-02 06:00:00,FOLLOW_UP,SPECIALIST
  7,2023-07-27,2023-07-27 06:00:00,FOLLOW_UP,GENERAL_PRACTITIONER
  7,2023-12-04,2023-12-04 06:00:00,EXAM,
  8,2023-01-22,2023-01-22 06:00:00,FOLLOW_UP,NURSE
  8,2023-05-08,2023-05-08 06:00:00,CONSULTATION,
  8,2023-06-10,2023-06-10 06:00:00,VACCINATION,
  8,2023-08-14,2023-08-14 06:00:00,FOLLOW_UP,GENERAL_PRACTITIONER
  8,2023-09-21,2023-09-21 06:00:00,EMERGENCY,
  8,2023-10-04,2023-10-04 06:00:00,VACCINATION,NURSE
  8,2023-10-11,2023-10-11 06:00:00,CONSULTATION,LABORATORY
  8,2023-11-13,2023-11-13 06:00:00,EMERGENCY,
  9,2023-02-15,2023-02-15 06:00:00,FOLLOW_UP,NURSE
  9,2023-06-21,2023-06-21 06:00:00,VACCINATION,LABORATORY
  9,2023-07-07,2023-07-07 06:00:00,CONSULTATION,RADIOLOGIST
  9,2023-07-10,2023-07-10 06:00:00,FOLLOW_UP,LABORATORY
  9,2023-07-11,2023-07-11 06:00:00,CONSULTATION,GENERAL_PRACTITIONER
  9,2023-08-21,2023-08-21 06:00:00,FOLLOW_UP,LABORATORY
  9,2023-10-29,2023-10-29 06:00:00,FOLLOW_UP,NURSE
  10,2023-02-05,2023-02-05 06:00:00,FOLLOW_UP,RADIOLOGIST
  10,2023-05-07,2023-05-07 06:00:00,EMERGENCY,SPECIALIST
  10,2023-06-10,2023-06-10 06:00:00,EMERGENCY,SPECIALIST
  10,2023-09-04,2023-09-04 06:00:00,EXAM,NURSE
  10,2023-09-30,2023-09-30 06:00:00,CONSULTATION,GENERAL_PRACTITIONER
  10,2023-10-08,2023-10-08 06:00:00,EXAM,SPECIALIST
  10,2023-10-26,2023-10-26 06:00:00,FOLLOW_UP,SPECIALIST
  10,2023-11-02,2023-11-02 06:00:00,CONSULTATION,LABORATORY
  10,2023-11-12,2023-11-12 06:00:00,EXAM,GENERAL_PRACTITIONER
  10,2023-11-17,2023-11-17 06:00:00,VACCINATION,NURSE
  10,2023-11-19,2023-11-19 06:00:00,EXAM,SPECIALIST
  
  '''
# ---
# name: TestConversionMethods.test_event_to_interval_fixed_duration[duration1]
  '''
  patient_id,start,end,event_type,provider
  1,2023-01-21,2023-01-22,EXAM,NURSE
  1,2023-01-22,2023-01-23,FOLLOW_UP,RADIOLOGIST
  1,2023-02-28,2023-03-01,EXAM,
  1,2023-03-29,2023-03-30,FOLLOW_UP,RADIOLOGIST
  1,2023-06-10,2023-06-11,VACCINATION,
  1,2023-07-11,2023-07-12,VACCINATION,LABORATORY
  1,2023-08-03,2023-08-04,EMERGENCY,NURSE
  1,2023-09-15,2023-09-16,VACCINATION,SPECIALIST
  1,2023-12-11,2023-12-12,CONSULTATION,NURSE
  1,2023-12-15,2023-12-16,EMERGENCY,
  1,2023-12-26,2023-12-27,EMERGENCY,
  2,2023-02-19,2023-02-20,VACCINATION,SPECIALIST
  2,2023-02-23,2023-02-24,EXAM,RADIOLOGIST
  2,2023-02-24,2023-02-25,VACCINATION,GENERAL_PRACTITIONER
  2,2023-03-30,2023-03-31,VACCINATION,SPECIALIST
  2,2023-05-11,2023-05-12,FOLLOW_UP,NURSE
  2,2023-05-15,2023-05-16,FOLLOW_UP,GENERAL_PRACTITIONER
  2,2023-06-16,2023-06-17,EXAM,RADIOLOGIST
  2,2023-07-09,2023-07-10,FOLLOW_UP,
  2,2023-07-21,2023-07-22,VACCINATION,
  2,2023-08-06,2023-08-07,VACCINATION,SPECIALIST
  2,2023-09-21,2023-09-22,EMERGENCY,GENERAL_PRACTITIONER
  2,2023-09-22,2023-09-23,EXAM,LABORATORY
  2,2023-09-28,2023-09-29,EMERGENCY,RADIOLOGIST
  2,2023-11-06,2023-11-07,FOLLOW_UP,SPECIALIST
  2,2023-12-04,2023-12-05,FOLLOW_UP,SPECIALIST
  2,2023-12-06,2023-12-07,VACCINATION,RADIOLOGIST
  3,2023-01-28,2023-01-29,CONSULTATION,RADIOLOGIST
  3,2023-02-02,2023-02-03,FOLLOW_UP,NURSE
  3,2023-02-10,2023-02-11,FOLLOW_UP,LABORATORY
  3,2023-03-06,2023-03-07,CONSULTATION,
  3,2023-03-22,2023-03-23,EMERGENCY,
  3,2023-05-16,2023-05-17,EMERGENCY,NURSE
  3,2023-06-21,2023-06-22,EMERGENCY,NURSE
  3,2023-08-15,2023-08-16,FOLLOW_UP,NURSE
  3,2023-08-19,2023-08-20,EXAM,GENERAL_PRACTITIONER
  3,2023-09-09,2023-09-10,VACCINATION,RADIOLOGIST
  3,2023-09-14,2023-09-15,FOLLOW_UP,SPECIALIST
  3,2023-10-16,2023-10-17,EMERGENCY,LABORATORY
  3,2023-12-10,2023-12-11,CONSULTATION,RADIOLOGIST
  4,2023-01-29,2023-01-30,VACCINATION,LABORATORY
  4,2023-03-27,2023-03-28,VACCINATION,SPECIALIST
  4,2023-04-06,2023-04-07,VACCINATION,LABORATORY
  4,2023-04-18,2023-04-19,VACCINATION,RADIOLOGIST
  4,2023-05-14,2023-05-15,VACCINATION,RADIOLOGIST
  4,2023-06-09,2023-06-10,EMERGENCY,NURSE
  4,2023-06-19,2023-06-20,FOLLOW_UP,GENERAL_PRACTITIONER
  4,2023-06-28,2023-06-29,CONSULTATION,RADIOLOGIST
  4,2023-07-26,2023-07-27,EXAM,SPECIALIST
  4,2023-08-19,2023-08-20,FOLLOW_UP,NURSE
  4,2023-09-12,2023-09-13,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-01-02,2023-01-03,EXAM,
  5,2023-02-21,2023-02-22,VACCINATION,SPECIALIST
  5,2023-02-23,2023-02-24,FOLLOW_UP,
  5,2023-03-22,2023-03-23,EMERGENCY,
  5,2023-04-08,2023-04-09,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-04-23,2023-04-24,FOLLOW_UP,GENERAL_PRACTITIONER
  5,2023-05-06,2023-05-07,EXAM,LABORATORY
  5,2023-05-17,2023-05-18,FOLLOW_UP,
  5,2023-06-01,2023-06-02,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-06-21,2023-06-22,EXAM,RADIOLOGIST
  5,2023-06-29,2023-06-30,CONSULTATION,GENERAL_PRACTITIONER
  5,2023-07-22,2023-07-23,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-08-19,2023-08-20,CONSULTATION,GENERAL_PRACTITIONER
  5,2023-08-21,2023-08-22,EMERGENCY,NURSE
  5,2023-09-12,2023-09-13,FOLLOW_UP,RADIOLOGIST
  5,2023-10-10,2023-10-11,CONSULTATION,
  5,2023-11-03,2023-11-04,EXAM,RADIOLOGIST
  5,2023-11-27,2023-11-28,EXAM,RADIOLOGIST
  6,2023-02-06,2023-02-07,EMERGENCY,GENERAL_PRACTITIONER
  6,2023-03-01,2023-03-02,CONSULTATION,SPECIALIST
  6,2023-04-22,2023-04-23,CONSULTATION,RADIOLOGIST
  6,2023-05-04,2023-05-05,EMERGENCY,LABORATORY
  6,2023-05-08,2023-05-09,EXAM,
  6,2023-05-28,2023-05-29,VACCINATION,GENERAL_PRACTITIONER
  6,2023-05-31,2023-06-01,EXAM,
  6,2023-08-21,2023-08-22,EMERGENCY,NURSE
  6,2023-09-16,2023-09-17,VACCINATION,RADIOLOGIST
  6,2023-09-20,2023-09-21,VACCINATION,SPECIALIST
  6,2023-09-24,2023-09-25,VACCINATION,GENERAL_PRACTITIONER
  6,2023-10-31,2023-11-01,VACCINATION,LABORATORY
  6,2023-12-12,2023-12-13,EMERGENCY,NURSE
  7,2023-03-16,2023-03-17,CONSULTATION,RADIOLOGIST
  7,2023-04-14,2023-04-15,VACCINATION,NURSE
  7,2023-04-22,2023-04-23,CONSULTATION,NURSE
  7,2023-06-01,2023-06-02,CONSULTATION,RADIOLOGIST
  7,2023-06-02,2023-06-03,FOLLOW_UP,SPECIALIST
  7,2023-07-27,2023-07-28,FOLLOW_UP,GENERAL_PRACTITIONER
  7,2023-12-04,2023-12-05,EXAM,
  8,2023-01-22,2023-01-23,FOLLOW_UP,NURSE
  8,2023-05-08,2023-05-09,CONSULTATION,
  8,2023-06-10,2023-06-11,VACCINATION,
  8,2023-08-14,2023-08-15,FOLLOW_UP,GENERAL_PRACTITIONER
  8,2023-09-21,2023-09-22,EMERGENCY,
  8,2023-10-04,2023-10-05,VACCINATION,NURSE
  8,2023-10-11,2023-10-12,CONSULTATION,LABORATORY
  8,2023-11-13,2023-11-14,EMERGENCY,
  9,2023-02-15,2023-02-16,FOLLOW_UP,NURSE
  9,2023-06-21,2023-06-22,VACCINATION,LABORATORY
  9,2023-07-07,2023-07-08,CONSULTATION,RADIOLOGIST
  9,2023-07-10,2023-07-11,FOLLOW_UP,LABORATORY
  9,2023-07-11,2023-07-12,CONSULTATION,GENERAL_PRACTITIONER
  9,2023-08-21,2023-08-22,FOLLOW_UP,LABORATORY
  9,2023-10-29,2023-10-30,FOLLOW_UP,NURSE
  10,2023-02-05,2023-02-06,FOLLOW_UP,RADIOLOGIST
  10,2023-05-07,2023-05-08,EMERGENCY,SPECIALIST
  10,2023-06-10,2023-06-11,EMERGENCY,SPECIALIST
  10,2023-09-04,2023-09-05,EXAM,NURSE
  10,2023-09-30,2023-10-01,CONSULTATION,GENERAL_PRACTITIONER
  10,2023-10-08,2023-10-09,EXAM,SPECIALIST
  10,2023-10-26,2023-10-27,FOLLOW_UP,SPECIALIST
  10,2023-11-02,2023-11-03,CONSULTATION,LABORATORY
  10,2023-11-12,2023-11-13,EXAM,GENERAL_PRACTITIONER
  10,2023-11-17,2023-11-18,VACCINATION,NURSE
  10,2023-11-19,2023-11-20,EXAM,SPECIALIST
  
  '''
# ---
# name: TestConversionMethods.test_event_to_interval_numeric_duration_with_timesteps
  '''
  patient_id,start,end,event_type,severity,duration_units
  101,0.0,2.5,start,high,5.5
  101,5.5,8.0,medication,medium,4.5
  101,10.0,12.5,discharge,low,
  102,0.0,2.5,start,medium,3.25
  102,3.25,5.75,test,low,1.75
  103,2.0,4.5,procedure,high,2.0
  
  '''
# ---
# name: TestConversionMethods.test_event_to_interval_numeric_duration_with_timesteps.1
  '''
  patient_id,start,end,event_type,severity,duration_units
  101,0.0,5.5,start,high,5.5
  101,5.5,10.0,medication,medium,4.5
  101,10.0,,discharge,low,
  102,0.0,3.25,start,medium,3.25
  102,3.25,5.0,test,low,1.75
  103,2.0,4.0,procedure,high,2.0
  
  '''
# ---
# name: TestConversionMethods.test_event_to_interval_with_drop_duration_feature
  '''
  patient_id,start,end,event_type,location
  101,2023-06-01 09:00:00,2023-06-01 11:30:00,admission,Emergency
  101,2023-06-01 14:00:00,2023-06-01 15:30:00,procedure,Surgery
  101,2023-06-02 10:00:00,,discharge,Discharge
  102,2023-06-01 10:30:00,2023-06-01 13:30:00,admission,Emergency
  102,2023-06-01 18:00:00,2023-06-01 19:00:00,procedure,Radiology
  103,2023-06-01 11:00:00,2023-06-01 13:00:00,admission,Emergency
  103,2023-06-01 15:30:00,2023-06-01 18:00:00,procedure,Surgery
  
  '''
# ---
# name: TestConversionMethods.test_event_to_interval_with_drop_duration_feature.1
  SequenceMetadata(static_descriptors={}, temporal_descriptor=TemporalDescriptor(temporal_type='datetime', settings=DateTimeSettings(min_value=Timestamp('2023-06-01 09:00:00'), max_value=Timestamp('2023-06-02 10:00:00'), timezone=None, format=None)), granularity=<Granularity.DAY: 4>, entity_descriptors={'event_type': FeatureDescriptor(feature_type='categorical', settings=CategoricalFeatureSettings(loader_type=None, loader_kwargs=None, categories=['admission', 'discharge', 'procedure'], ordered=False)), 'location': FeatureDescriptor(feature_type='categorical', settings=CategoricalFeatureSettings(loader_type=None, loader_kwargs=None, categories=['Discharge', 'Emergency', 'Radiology', 'Surgery'], ordered=False))})
# ---
# name: TestConversionMethods.test_event_to_interval_with_drop_duration_timesteps
  '''
  patient_id,start,end,event_type,severity
  101,0.0,5.5,start,high
  101,5.5,10.0,medication,medium
  101,10.0,,discharge,low
  102,0.0,3.25,start,medium
  102,3.25,5.0,test,low
  103,2.0,4.0,procedure,high
  
  '''
# ---
# name: TestConversionMethods.test_event_to_interval_with_drop_duration_timesteps.1
  SequenceMetadata(static_descriptors={}, temporal_descriptor=TemporalDescriptor(temporal_type='timestep', settings=TimestepSettings(min_value=0.0, max_value=10.0, dtype='float64')), granularity=<Granularity.UNIT: 1>, entity_descriptors={'event_type': FeatureDescriptor(feature_type='categorical', settings=CategoricalFeatureSettings(loader_type=None, loader_kwargs=None, categories=['discharge', 'medication', 'procedure', 'start', 'test'], ordered=False)), 'severity': FeatureDescriptor(feature_type='categorical', settings=CategoricalFeatureSettings(loader_type=None, loader_kwargs=None, categories=['high', 'low', 'medium'], ordered=False))})
# ---
# name: TestConversionMethods.test_event_to_state_custom_columns
  '''
  patient_id,begin,finish,event_type,provider
  1,2023-01-21,2023-01-22,EXAM,NURSE
  1,2023-01-22,2023-02-28,FOLLOW_UP,RADIOLOGIST
  1,2023-02-28,2023-03-29,EXAM,
  1,2023-03-29,2023-06-10,FOLLOW_UP,RADIOLOGIST
  1,2023-06-10,2023-07-11,VACCINATION,
  1,2023-07-11,2023-08-03,VACCINATION,LABORATORY
  1,2023-08-03,2023-09-15,EMERGENCY,NURSE
  1,2023-09-15,2023-12-11,VACCINATION,SPECIALIST
  1,2023-12-11,2023-12-15,CONSULTATION,NURSE
  1,2023-12-15,2023-12-26,EMERGENCY,
  1,2023-12-26,2024-01-15,EMERGENCY,
  2,2023-02-19,2023-02-23,VACCINATION,SPECIALIST
  2,2023-02-23,2023-02-24,EXAM,RADIOLOGIST
  2,2023-02-24,2023-03-30,VACCINATION,GENERAL_PRACTITIONER
  2,2023-03-30,2023-05-11,VACCINATION,SPECIALIST
  2,2023-05-11,2023-05-15,FOLLOW_UP,NURSE
  2,2023-05-15,2023-06-16,FOLLOW_UP,GENERAL_PRACTITIONER
  2,2023-06-16,2023-07-09,EXAM,RADIOLOGIST
  2,2023-07-09,2023-07-21,FOLLOW_UP,
  2,2023-07-21,2023-08-06,VACCINATION,
  2,2023-08-06,2023-09-21,VACCINATION,SPECIALIST
  2,2023-09-21,2023-09-22,EMERGENCY,GENERAL_PRACTITIONER
  2,2023-09-22,2023-09-28,EXAM,LABORATORY
  2,2023-09-28,2023-11-06,EMERGENCY,RADIOLOGIST
  2,2023-11-06,2023-12-04,FOLLOW_UP,SPECIALIST
  2,2023-12-04,2023-12-06,FOLLOW_UP,SPECIALIST
  2,2023-12-06,2024-01-15,VACCINATION,RADIOLOGIST
  3,2023-01-28,2023-02-02,CONSULTATION,RADIOLOGIST
  3,2023-02-02,2023-02-10,FOLLOW_UP,NURSE
  3,2023-02-10,2023-03-06,FOLLOW_UP,LABORATORY
  3,2023-03-06,2023-03-22,CONSULTATION,
  3,2023-03-22,2023-05-16,EMERGENCY,
  3,2023-05-16,2023-06-21,EMERGENCY,NURSE
  3,2023-06-21,2023-08-15,EMERGENCY,NURSE
  3,2023-08-15,2023-08-19,FOLLOW_UP,NURSE
  3,2023-08-19,2023-09-09,EXAM,GENERAL_PRACTITIONER
  3,2023-09-09,2023-09-14,VACCINATION,RADIOLOGIST
  3,2023-09-14,2023-10-16,FOLLOW_UP,SPECIALIST
  3,2023-10-16,2023-12-10,EMERGENCY,LABORATORY
  3,2023-12-10,2024-01-15,CONSULTATION,RADIOLOGIST
  4,2023-01-29,2023-03-27,VACCINATION,LABORATORY
  4,2023-03-27,2023-04-06,VACCINATION,SPECIALIST
  4,2023-04-06,2023-04-18,VACCINATION,LABORATORY
  4,2023-04-18,2023-05-14,VACCINATION,RADIOLOGIST
  4,2023-05-14,2023-06-09,VACCINATION,RADIOLOGIST
  4,2023-06-09,2023-06-19,EMERGENCY,NURSE
  4,2023-06-19,2023-06-28,FOLLOW_UP,GENERAL_PRACTITIONER
  4,2023-06-28,2023-07-26,CONSULTATION,RADIOLOGIST
  4,2023-07-26,2023-08-19,EXAM,SPECIALIST
  4,2023-08-19,2023-09-12,FOLLOW_UP,NURSE
  4,2023-09-12,2024-01-15,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-01-02,2023-02-21,EXAM,
  5,2023-02-21,2023-02-23,VACCINATION,SPECIALIST
  5,2023-02-23,2023-03-22,FOLLOW_UP,
  5,2023-03-22,2023-04-08,EMERGENCY,
  5,2023-04-08,2023-04-23,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-04-23,2023-05-06,FOLLOW_UP,GENERAL_PRACTITIONER
  5,2023-05-06,2023-05-17,EXAM,LABORATORY
  5,2023-05-17,2023-06-01,FOLLOW_UP,
  5,2023-06-01,2023-06-21,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-06-21,2023-06-29,EXAM,RADIOLOGIST
  5,2023-06-29,2023-07-22,CONSULTATION,GENERAL_PRACTITIONER
  5,2023-07-22,2023-08-19,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-08-19,2023-08-21,CONSULTATION,GENERAL_PRACTITIONER
  5,2023-08-21,2023-09-12,EMERGENCY,NURSE
  5,2023-09-12,2023-10-10,FOLLOW_UP,RADIOLOGIST
  5,2023-10-10,2023-11-03,CONSULTATION,
  5,2023-11-03,2023-11-27,EXAM,RADIOLOGIST
  5,2023-11-27,2024-01-15,EXAM,RADIOLOGIST
  6,2023-02-06,2023-03-01,EMERGENCY,GENERAL_PRACTITIONER
  6,2023-03-01,2023-04-22,CONSULTATION,SPECIALIST
  6,2023-04-22,2023-05-04,CONSULTATION,RADIOLOGIST
  6,2023-05-04,2023-05-08,EMERGENCY,LABORATORY
  6,2023-05-08,2023-05-28,EXAM,
  6,2023-05-28,2023-05-31,VACCINATION,GENERAL_PRACTITIONER
  6,2023-05-31,2023-08-21,EXAM,
  6,2023-08-21,2023-09-16,EMERGENCY,NURSE
  6,2023-09-16,2023-09-20,VACCINATION,RADIOLOGIST
  6,2023-09-20,2023-09-24,VACCINATION,SPECIALIST
  6,2023-09-24,2023-10-31,VACCINATION,GENERAL_PRACTITIONER
  6,2023-10-31,2023-12-12,VACCINATION,LABORATORY
  6,2023-12-12,2024-01-15,EMERGENCY,NURSE
  7,2023-03-16,2023-04-14,CONSULTATION,RADIOLOGIST
  7,2023-04-14,2023-04-22,VACCINATION,NURSE
  7,2023-04-22,2023-06-01,CONSULTATION,NURSE
  7,2023-06-01,2023-06-02,CONSULTATION,RADIOLOGIST
  7,2023-06-02,2023-07-27,FOLLOW_UP,SPECIALIST
  7,2023-07-27,2023-12-04,FOLLOW_UP,GENERAL_PRACTITIONER
  7,2023-12-04,2024-01-15,EXAM,
  8,2023-01-22,2023-05-08,FOLLOW_UP,NURSE
  8,2023-05-08,2023-06-10,CONSULTATION,
  8,2023-06-10,2023-08-14,VACCINATION,
  8,2023-08-14,2023-09-21,FOLLOW_UP,GENERAL_PRACTITIONER
  8,2023-09-21,2023-10-04,EMERGENCY,
  8,2023-10-04,2023-10-11,VACCINATION,NURSE
  8,2023-10-11,2023-11-13,CONSULTATION,LABORATORY
  8,2023-11-13,2024-01-15,EMERGENCY,
  9,2023-02-15,2023-06-21,FOLLOW_UP,NURSE
  9,2023-06-21,2023-07-07,VACCINATION,LABORATORY
  9,2023-07-07,2023-07-10,CONSULTATION,RADIOLOGIST
  9,2023-07-10,2023-07-11,FOLLOW_UP,LABORATORY
  9,2023-07-11,2023-08-21,CONSULTATION,GENERAL_PRACTITIONER
  9,2023-08-21,2023-10-29,FOLLOW_UP,LABORATORY
  9,2023-10-29,2024-01-15,FOLLOW_UP,NURSE
  10,2023-02-05,2023-05-07,FOLLOW_UP,RADIOLOGIST
  10,2023-05-07,2023-06-10,EMERGENCY,SPECIALIST
  10,2023-06-10,2023-09-04,EMERGENCY,SPECIALIST
  10,2023-09-04,2023-09-30,EXAM,NURSE
  10,2023-09-30,2023-10-08,CONSULTATION,GENERAL_PRACTITIONER
  10,2023-10-08,2023-10-26,EXAM,SPECIALIST
  10,2023-10-26,2023-11-02,FOLLOW_UP,SPECIALIST
  10,2023-11-02,2023-11-12,CONSULTATION,LABORATORY
  10,2023-11-12,2023-11-17,EXAM,GENERAL_PRACTITIONER
  10,2023-11-17,2023-11-19,VACCINATION,NURSE
  10,2023-11-19,2024-01-15,EXAM,SPECIALIST
  
  '''
# ---
# name: TestConversionMethods.test_event_to_state_with_end_value
  '''
  patient_id,start,end,event_type,provider
  1,2023-01-21,2023-01-22,EXAM,NURSE
  1,2023-01-22,2023-02-28,FOLLOW_UP,RADIOLOGIST
  1,2023-02-28,2023-03-29,EXAM,
  1,2023-03-29,2023-06-10,FOLLOW_UP,RADIOLOGIST
  1,2023-06-10,2023-07-11,VACCINATION,
  1,2023-07-11,2023-08-03,VACCINATION,LABORATORY
  1,2023-08-03,2023-09-15,EMERGENCY,NURSE
  1,2023-09-15,2023-12-11,VACCINATION,SPECIALIST
  1,2023-12-11,2023-12-15,CONSULTATION,NURSE
  1,2023-12-15,2023-12-26,EMERGENCY,
  1,2023-12-26,2024-01-15,EMERGENCY,
  2,2023-02-19,2023-02-23,VACCINATION,SPECIALIST
  2,2023-02-23,2023-02-24,EXAM,RADIOLOGIST
  2,2023-02-24,2023-03-30,VACCINATION,GENERAL_PRACTITIONER
  2,2023-03-30,2023-05-11,VACCINATION,SPECIALIST
  2,2023-05-11,2023-05-15,FOLLOW_UP,NURSE
  2,2023-05-15,2023-06-16,FOLLOW_UP,GENERAL_PRACTITIONER
  2,2023-06-16,2023-07-09,EXAM,RADIOLOGIST
  2,2023-07-09,2023-07-21,FOLLOW_UP,
  2,2023-07-21,2023-08-06,VACCINATION,
  2,2023-08-06,2023-09-21,VACCINATION,SPECIALIST
  2,2023-09-21,2023-09-22,EMERGENCY,GENERAL_PRACTITIONER
  2,2023-09-22,2023-09-28,EXAM,LABORATORY
  2,2023-09-28,2023-11-06,EMERGENCY,RADIOLOGIST
  2,2023-11-06,2023-12-04,FOLLOW_UP,SPECIALIST
  2,2023-12-04,2023-12-06,FOLLOW_UP,SPECIALIST
  2,2023-12-06,2024-01-15,VACCINATION,RADIOLOGIST
  3,2023-01-28,2023-02-02,CONSULTATION,RADIOLOGIST
  3,2023-02-02,2023-02-10,FOLLOW_UP,NURSE
  3,2023-02-10,2023-03-06,FOLLOW_UP,LABORATORY
  3,2023-03-06,2023-03-22,CONSULTATION,
  3,2023-03-22,2023-05-16,EMERGENCY,
  3,2023-05-16,2023-06-21,EMERGENCY,NURSE
  3,2023-06-21,2023-08-15,EMERGENCY,NURSE
  3,2023-08-15,2023-08-19,FOLLOW_UP,NURSE
  3,2023-08-19,2023-09-09,EXAM,GENERAL_PRACTITIONER
  3,2023-09-09,2023-09-14,VACCINATION,RADIOLOGIST
  3,2023-09-14,2023-10-16,FOLLOW_UP,SPECIALIST
  3,2023-10-16,2023-12-10,EMERGENCY,LABORATORY
  3,2023-12-10,2024-01-15,CONSULTATION,RADIOLOGIST
  4,2023-01-29,2023-03-27,VACCINATION,LABORATORY
  4,2023-03-27,2023-04-06,VACCINATION,SPECIALIST
  4,2023-04-06,2023-04-18,VACCINATION,LABORATORY
  4,2023-04-18,2023-05-14,VACCINATION,RADIOLOGIST
  4,2023-05-14,2023-06-09,VACCINATION,RADIOLOGIST
  4,2023-06-09,2023-06-19,EMERGENCY,NURSE
  4,2023-06-19,2023-06-28,FOLLOW_UP,GENERAL_PRACTITIONER
  4,2023-06-28,2023-07-26,CONSULTATION,RADIOLOGIST
  4,2023-07-26,2023-08-19,EXAM,SPECIALIST
  4,2023-08-19,2023-09-12,FOLLOW_UP,NURSE
  4,2023-09-12,2024-01-15,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-01-02,2023-02-21,EXAM,
  5,2023-02-21,2023-02-23,VACCINATION,SPECIALIST
  5,2023-02-23,2023-03-22,FOLLOW_UP,
  5,2023-03-22,2023-04-08,EMERGENCY,
  5,2023-04-08,2023-04-23,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-04-23,2023-05-06,FOLLOW_UP,GENERAL_PRACTITIONER
  5,2023-05-06,2023-05-17,EXAM,LABORATORY
  5,2023-05-17,2023-06-01,FOLLOW_UP,
  5,2023-06-01,2023-06-21,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-06-21,2023-06-29,EXAM,RADIOLOGIST
  5,2023-06-29,2023-07-22,CONSULTATION,GENERAL_PRACTITIONER
  5,2023-07-22,2023-08-19,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-08-19,2023-08-21,CONSULTATION,GENERAL_PRACTITIONER
  5,2023-08-21,2023-09-12,EMERGENCY,NURSE
  5,2023-09-12,2023-10-10,FOLLOW_UP,RADIOLOGIST
  5,2023-10-10,2023-11-03,CONSULTATION,
  5,2023-11-03,2023-11-27,EXAM,RADIOLOGIST
  5,2023-11-27,2024-01-15,EXAM,RADIOLOGIST
  6,2023-02-06,2023-03-01,EMERGENCY,GENERAL_PRACTITIONER
  6,2023-03-01,2023-04-22,CONSULTATION,SPECIALIST
  6,2023-04-22,2023-05-04,CONSULTATION,RADIOLOGIST
  6,2023-05-04,2023-05-08,EMERGENCY,LABORATORY
  6,2023-05-08,2023-05-28,EXAM,
  6,2023-05-28,2023-05-31,VACCINATION,GENERAL_PRACTITIONER
  6,2023-05-31,2023-08-21,EXAM,
  6,2023-08-21,2023-09-16,EMERGENCY,NURSE
  6,2023-09-16,2023-09-20,VACCINATION,RADIOLOGIST
  6,2023-09-20,2023-09-24,VACCINATION,SPECIALIST
  6,2023-09-24,2023-10-31,VACCINATION,GENERAL_PRACTITIONER
  6,2023-10-31,2023-12-12,VACCINATION,LABORATORY
  6,2023-12-12,2024-01-15,EMERGENCY,NURSE
  7,2023-03-16,2023-04-14,CONSULTATION,RADIOLOGIST
  7,2023-04-14,2023-04-22,VACCINATION,NURSE
  7,2023-04-22,2023-06-01,CONSULTATION,NURSE
  7,2023-06-01,2023-06-02,CONSULTATION,RADIOLOGIST
  7,2023-06-02,2023-07-27,FOLLOW_UP,SPECIALIST
  7,2023-07-27,2023-12-04,FOLLOW_UP,GENERAL_PRACTITIONER
  7,2023-12-04,2024-01-15,EXAM,
  8,2023-01-22,2023-05-08,FOLLOW_UP,NURSE
  8,2023-05-08,2023-06-10,CONSULTATION,
  8,2023-06-10,2023-08-14,VACCINATION,
  8,2023-08-14,2023-09-21,FOLLOW_UP,GENERAL_PRACTITIONER
  8,2023-09-21,2023-10-04,EMERGENCY,
  8,2023-10-04,2023-10-11,VACCINATION,NURSE
  8,2023-10-11,2023-11-13,CONSULTATION,LABORATORY
  8,2023-11-13,2024-01-15,EMERGENCY,
  9,2023-02-15,2023-06-21,FOLLOW_UP,NURSE
  9,2023-06-21,2023-07-07,VACCINATION,LABORATORY
  9,2023-07-07,2023-07-10,CONSULTATION,RADIOLOGIST
  9,2023-07-10,2023-07-11,FOLLOW_UP,LABORATORY
  9,2023-07-11,2023-08-21,CONSULTATION,GENERAL_PRACTITIONER
  9,2023-08-21,2023-10-29,FOLLOW_UP,LABORATORY
  9,2023-10-29,2024-01-15,FOLLOW_UP,NURSE
  10,2023-02-05,2023-05-07,FOLLOW_UP,RADIOLOGIST
  10,2023-05-07,2023-06-10,EMERGENCY,SPECIALIST
  10,2023-06-10,2023-09-04,EMERGENCY,SPECIALIST
  10,2023-09-04,2023-09-30,EXAM,NURSE
  10,2023-09-30,2023-10-08,CONSULTATION,GENERAL_PRACTITIONER
  10,2023-10-08,2023-10-26,EXAM,SPECIALIST
  10,2023-10-26,2023-11-02,FOLLOW_UP,SPECIALIST
  10,2023-11-02,2023-11-12,CONSULTATION,LABORATORY
  10,2023-11-12,2023-11-17,EXAM,GENERAL_PRACTITIONER
  10,2023-11-17,2023-11-19,VACCINATION,NURSE
  10,2023-11-19,2024-01-15,EXAM,SPECIALIST
  
  '''
# ---
# name: TestConversionMethods.test_interval_state_to_event_with_add_duration[interval]
  '''
  patient_id,time,medication,administration_route,dosage,duration
  1,2023-01-08,PAIN_RELIEVER,,2,10 days
  1,2023-01-12,ANTICOAGULANT,CUTANEOUS,1,16 days
  1,2023-01-20,ANTIBIOTIC,ORAL,2,24 days
  1,2023-05-23,ANTIHYPERTENSIVE,INTRAVENOUS,3,7 days
  1,2023-09-09,ANTICOAGULANT,INTRAVENOUS,3,11 days
  2,2023-01-05,ANTIBIOTIC,ORAL,2,29 days
  2,2023-01-10,PAIN_RELIEVER,,1,30 days
  2,2023-02-04,PAIN_RELIEVER,INTRAVENOUS,1,12 days
  2,2023-05-25,ANTIBIOTIC,INHALATION,1,15 days
  2,2023-08-08,ANTIBIOTIC,CUTANEOUS,3,11 days
  2,2023-08-08,ANTIHYPERTENSIVE,INHALATION,2,22 days
  3,2023-04-15,ANTIBIOTIC,INHALATION,3,9 days
  3,2023-09-24,PAIN_RELIEVER,ORAL,2,27 days
  3,2023-10-10,ANTIHYPERTENSIVE,ORAL,2,23 days
  4,2023-02-22,PAIN_RELIEVER,INTRAMUSCULAR,3,11 days
  4,2023-05-25,ANTIBIOTIC,ORAL,3,27 days
  4,2023-06-11,CORTICOSTEROID,INTRAVENOUS,2,28 days
  4,2023-06-22,ANTICOAGULANT,ORAL,1,19 days
  4,2023-07-16,CORTICOSTEROID,INHALATION,3,11 days
  4,2023-10-15,ANTICOAGULANT,INTRAMUSCULAR,2,8 days
  5,2023-02-23,ANTIHYPERTENSIVE,INTRAVENOUS,1,18 days
  5,2023-03-07,CORTICOSTEROID,CUTANEOUS,2,17 days
  5,2023-04-22,ANTIHYPERTENSIVE,INHALATION,2,21 days
  5,2023-09-04,CORTICOSTEROID,,1,16 days
  5,2023-09-06,ANTIBIOTIC,CUTANEOUS,2,12 days
  5,2023-10-21,PAIN_RELIEVER,INTRAMUSCULAR,2,24 days
  6,2023-03-02,CORTICOSTEROID,INHALATION,1,25 days
  6,2023-03-10,ANTIHYPERTENSIVE,INTRAMUSCULAR,1,8 days
  6,2023-04-02,ANTIHYPERTENSIVE,INHALATION,2,16 days
  6,2023-04-21,CORTICOSTEROID,CUTANEOUS,1,29 days
  6,2023-05-06,CORTICOSTEROID,INTRAVENOUS,3,17 days
  6,2023-05-18,ANTIBIOTIC,INTRAMUSCULAR,1,30 days
  6,2023-07-14,CORTICOSTEROID,INHALATION,2,9 days
  7,2023-02-03,PAIN_RELIEVER,INHALATION,3,23 days
  7,2023-03-14,ANTIBIOTIC,,3,21 days
  7,2023-05-13,ANTICOAGULANT,INTRAMUSCULAR,2,15 days
  8,2023-01-14,CORTICOSTEROID,,3,30 days
  8,2023-01-26,ANTIBIOTIC,ORAL,3,10 days
  8,2023-01-28,ANTIBIOTIC,ORAL,3,16 days
  8,2023-03-19,PAIN_RELIEVER,INHALATION,2,30 days
  8,2023-08-26,ANTICOAGULANT,INHALATION,2,17 days
  8,2023-09-10,PAIN_RELIEVER,CUTANEOUS,3,26 days
  8,2023-10-21,CORTICOSTEROID,ORAL,3,9 days
  9,2023-04-19,ANTICOAGULANT,INTRAMUSCULAR,3,24 days
  9,2023-05-06,ANTIBIOTIC,ORAL,1,18 days
  9,2023-07-31,PAIN_RELIEVER,INTRAVENOUS,1,10 days
  9,2023-09-21,ANTIBIOTIC,CUTANEOUS,3,14 days
  10,2023-03-11,ANTICOAGULANT,INTRAVENOUS,2,29 days
  10,2023-04-05,ANTIBIOTIC,INTRAVENOUS,3,30 days
  10,2023-04-11,ANTICOAGULANT,INTRAMUSCULAR,2,12 days
  10,2023-08-17,ANTIHYPERTENSIVE,INHALATION,2,7 days
  
  '''
# ---
# name: TestConversionMethods.test_interval_state_to_event_with_add_duration[interval].1
  SequenceMetadata(static_descriptors={'gender': FeatureDescriptor(feature_type='categorical', settings=CategoricalFeatureSettings(loader_type=None, loader_kwargs=None, categories=['F', 'M'], ordered=False)), 'age': FeatureDescriptor(feature_type='numerical', settings=NumericalFeatureSettings(loader_type=None, loader_kwargs=None, dtype='Int32', min_value=22.0, max_value=84.0)), 'insurance': FeatureDescriptor(feature_type='categorical', settings=CategoricalFeatureSettings(loader_type=None, loader_kwargs=None, categories=['MIXED', 'PRIVATE', 'PUBLIC'], ordered=False)), 'chronic_condition': FeatureDescriptor(feature_type='categorical', settings=CategoricalFeatureSettings(loader_type=None, loader_kwargs=None, categories=['False', 'True'], ordered=False))}, temporal_descriptor=TemporalDescriptor(temporal_type='datetime', settings=DateTimeSettings(min_value=Timestamp('2023-01-05 00:00:00'), max_value=Timestamp('2023-10-21 00:00:00'), timezone=None, format=None)), granularity=<Granularity.DAY: 4>, entity_descriptors={'medication': FeatureDescriptor(feature_type='categorical', settings=CategoricalFeatureSettings(loader_type=None, loader_kwargs=None, categories=['ANTIBIOTIC', 'ANTICOAGULANT', 'ANTIHYPERTENSIVE', 'CORTICOSTEROID', 'PAIN_RELIEVER'], ordered=False)), 'administration_route': FeatureDescriptor(feature_type='categorical', settings=CategoricalFeatureSettings(loader_type=None, loader_kwargs=None, categories=['CUTANEOUS', 'INHALATION', 'INTRAMUSCULAR', 'INTRAVENOUS', 'ORAL'], ordered=False)), 'dosage': FeatureDescriptor(feature_type='numerical', settings=NumericalFeatureSettings(loader_type=None, loader_kwargs=None, dtype='Int32', min_value=1.0, max_value=3.0)), 'duration': FeatureDescriptor(feature_type='duration', settings=DurationFeatureSettings(loader_type=None, loader_kwargs=None, granularity=<Granularity.WEEK: 5>, min_value=Timedelta('7 days 00:00:00'), max_value=Timedelta('30 days 00:00:00')))})
# ---
# name: TestConversionMethods.test_interval_state_to_event_with_add_duration[state]
  '''
  patient_id,time,health_state,condition,duration
  1,2023-01-01,HEALTHY,DIGESTIVE,349 days
  1,2023-12-16,HEALTHY,,15 days
  2,2023-01-01,HEALTHY,CARDIAC,349 days
  2,2023-12-16,CHRONIC_MONITORING,CARDIAC,15 days
  3,2023-01-01,CONVALESCENCE,CARDIAC,94 days
  3,2023-04-05,CHRONIC_MONITORING,NEUROLOGICAL,254 days
  3,2023-12-15,REMISSION,CARDIAC,16 days
  4,2023-01-01,CHRONIC_MONITORING,NEUROLOGICAL,158 days
  4,2023-06-08,CONVALESCENCE,,40 days
  4,2023-07-18,REMISSION,DIGESTIVE,149 days
  4,2023-12-14,CONVALESCENCE,,17 days
  5,2023-01-01,CONVALESCENCE,DIGESTIVE,349 days
  5,2023-12-16,CHRONIC_MONITORING,DIGESTIVE,15 days
  6,2023-01-01,REMISSION,DIGESTIVE,67 days
  6,2023-03-09,TREATMENT,RESPIRATORY,160 days
  6,2023-08-16,TREATMENT,DIGESTIVE,120 days
  6,2023-12-14,CONVALESCENCE,DIGESTIVE,17 days
  7,2023-01-01,HEALTHY,RESPIRATORY,147 days
  7,2023-05-28,TREATMENT,NEUROLOGICAL,52 days
  7,2023-07-19,HEALTHY,DIGESTIVE,148 days
  7,2023-12-14,REMISSION,RESPIRATORY,17 days
  8,2023-01-01,CONVALESCENCE,RESPIRATORY,349 days
  8,2023-12-16,TREATMENT,,15 days
  9,2023-01-01,CONVALESCENCE,DIGESTIVE,349 days
  9,2023-12-16,HEALTHY,,15 days
  10,2023-01-01,HEALTHY,DIGESTIVE,349 days
  10,2023-12-16,CHRONIC_MONITORING,NEUROLOGICAL,15 days
  
  '''
# ---
# name: TestConversionMethods.test_interval_state_to_event_with_add_duration[state].1
  SequenceMetadata(static_descriptors={'gender': FeatureDescriptor(feature_type='categorical', settings=CategoricalFeatureSettings(loader_type=None, loader_kwargs=None, categories=['F', 'M'], ordered=False)), 'age': FeatureDescriptor(feature_type='numerical', settings=NumericalFeatureSettings(loader_type=None, loader_kwargs=None, dtype='Int32', min_value=22.0, max_value=84.0)), 'insurance': FeatureDescriptor(feature_type='categorical', settings=CategoricalFeatureSettings(loader_type=None, loader_kwargs=None, categories=['MIXED', 'PRIVATE', 'PUBLIC'], ordered=False)), 'chronic_condition': FeatureDescriptor(feature_type='categorical', settings=CategoricalFeatureSettings(loader_type=None, loader_kwargs=None, categories=['False', 'True'], ordered=False))}, temporal_descriptor=TemporalDescriptor(temporal_type='datetime', settings=DateTimeSettings(min_value=Timestamp('2023-01-01 00:00:00'), max_value=Timestamp('2023-12-16 00:00:00'), timezone=None, format=None)), granularity=<Granularity.DAY: 4>, entity_descriptors={'health_state': FeatureDescriptor(feature_type='categorical', settings=CategoricalFeatureSettings(loader_type=None, loader_kwargs=None, categories=['CHRONIC_MONITORING', 'CONVALESCENCE', 'HEALTHY', 'REMISSION', 'TREATMENT'], ordered=False)), 'condition': FeatureDescriptor(feature_type='categorical', settings=CategoricalFeatureSettings(loader_type=None, loader_kwargs=None, categories=['CARDIAC', 'DIGESTIVE', 'NEUROLOGICAL', 'RESPIRATORY'], ordered=False)), 'duration': FeatureDescriptor(feature_type='duration', settings=DurationFeatureSettings(loader_type=None, loader_kwargs=None, granularity=<Granularity.MONTH: 6>, min_value=Timedelta('15 days 00:00:00'), max_value=Timedelta('349 days 00:00:00')))})
# ---
# name: TestMetadataPreservation.test_entity_metadata_preserved[event]
  SequenceMetadata(static_descriptors={'gender': FeatureDescriptor(feature_type='categorical', settings=CategoricalFeatureSettings(loader_type=None, loader_kwargs=None, categories=['F', 'M'], ordered=False)), 'age': FeatureDescriptor(feature_type='numerical', settings=NumericalFeatureSettings(loader_type=None, loader_kwargs=None, dtype='Int32', min_value=22.0, max_value=84.0)), 'insurance': FeatureDescriptor(feature_type='categorical', settings=CategoricalFeatureSettings(loader_type=None, loader_kwargs=None, categories=['MIXED', 'PRIVATE', 'PUBLIC'], ordered=False)), 'chronic_condition': FeatureDescriptor(feature_type='categorical', settings=CategoricalFeatureSettings(loader_type=None, loader_kwargs=None, categories=['False', 'True'], ordered=False))}, temporal_descriptor=TemporalDescriptor(temporal_type='datetime', settings=DateTimeSettings(min_value=Timestamp('2023-01-02 00:00:00'), max_value=Timestamp('2023-12-26 00:00:00'), timezone=None, format=None)), granularity=<Granularity.DAY: 4>, entity_descriptors={'event_type': FeatureDescriptor(feature_type='categorical', settings=CategoricalFeatureSettings(loader_type=None, loader_kwargs=None, categories=['CONSULTATION', 'EMERGENCY', 'EXAM', 'FOLLOW_UP', 'VACCINATION'], ordered=False)), 'provider': FeatureDescriptor(feature_type='categorical', settings=CategoricalFeatureSettings(loader_type=None, loader_kwargs=None, categories=['GENERAL_PRACTITIONER', 'LABORATORY', 'NURSE', 'RADIOLOGIST', 'SPECIALIST'], ordered=False))})
# ---
# name: TestMetadataPreservation.test_entity_metadata_preserved[interval]
  SequenceMetadata(static_descriptors={'gender': FeatureDescriptor(feature_type='categorical', settings=CategoricalFeatureSettings(loader_type=None, loader_kwargs=None, categories=['F', 'M'], ordered=False)), 'age': FeatureDescriptor(feature_type='numerical', settings=NumericalFeatureSettings(loader_type=None, loader_kwargs=None, dtype='Int32', min_value=22.0, max_value=84.0)), 'insurance': FeatureDescriptor(feature_type='categorical', settings=CategoricalFeatureSettings(loader_type=None, loader_kwargs=None, categories=['MIXED', 'PRIVATE', 'PUBLIC'], ordered=False)), 'chronic_condition': FeatureDescriptor(feature_type='categorical', settings=CategoricalFeatureSettings(loader_type=None, loader_kwargs=None, categories=['False', 'True'], ordered=False))}, temporal_descriptor=TemporalDescriptor(temporal_type='datetime', settings=DateTimeSettings(min_value=Timestamp('2023-01-05 00:00:00'), max_value=Timestamp('2023-10-21 00:00:00'), timezone=None, format=None)), granularity=<Granularity.DAY: 4>, entity_descriptors={'medication': FeatureDescriptor(feature_type='categorical', settings=CategoricalFeatureSettings(loader_type=None, loader_kwargs=None, categories=['ANTIBIOTIC', 'ANTICOAGULANT', 'ANTIHYPERTENSIVE', 'CORTICOSTEROID', 'PAIN_RELIEVER'], ordered=False)), 'administration_route': FeatureDescriptor(feature_type='categorical', settings=CategoricalFeatureSettings(loader_type=None, loader_kwargs=None, categories=['CUTANEOUS', 'INHALATION', 'INTRAMUSCULAR', 'INTRAVENOUS', 'ORAL'], ordered=False)), 'dosage': FeatureDescriptor(feature_type='numerical', settings=NumericalFeatureSettings(loader_type=None, loader_kwargs=None, dtype='Int32', min_value=1.0, max_value=3.0))})
# ---
# name: TestMetadataPreservation.test_entity_metadata_preserved[state]
  SequenceMetadata(static_descriptors={'gender': FeatureDescriptor(feature_type='categorical', settings=CategoricalFeatureSettings(loader_type=None, loader_kwargs=None, categories=['F', 'M'], ordered=False)), 'age': FeatureDescriptor(feature_type='numerical', settings=NumericalFeatureSettings(loader_type=None, loader_kwargs=None, dtype='Int32', min_value=22.0, max_value=84.0)), 'insurance': FeatureDescriptor(feature_type='categorical', settings=CategoricalFeatureSettings(loader_type=None, loader_kwargs=None, categories=['MIXED', 'PRIVATE', 'PUBLIC'], ordered=False)), 'chronic_condition': FeatureDescriptor(feature_type='categorical', settings=CategoricalFeatureSettings(loader_type=None, loader_kwargs=None, categories=['False', 'True'], ordered=False))}, temporal_descriptor=TemporalDescriptor(temporal_type='datetime', settings=DateTimeSettings(min_value=Timestamp('2023-01-01 00:00:00'), max_value=Timestamp('2023-12-16 00:00:00'), timezone=None, format=None)), granularity=<Granularity.DAY: 4>, entity_descriptors={'health_state': FeatureDescriptor(feature_type='categorical', settings=CategoricalFeatureSettings(loader_type=None, loader_kwargs=None, categories=['CHRONIC_MONITORING', 'CONVALESCENCE', 'HEALTHY', 'REMISSION', 'TREATMENT'], ordered=False)), 'condition': FeatureDescriptor(feature_type='categorical', settings=CategoricalFeatureSettings(loader_type=None, loader_kwargs=None, categories=['CARDIAC', 'DIGESTIVE', 'NEUROLOGICAL', 'RESPIRATORY'], ordered=False))})
# ---
# name: TestMetadataPreservation.test_temporal_metadata_preserved[event]
  SequenceMetadata(static_descriptors={'gender': FeatureDescriptor(feature_type='categorical', settings=CategoricalFeatureSettings(loader_type=None, loader_kwargs=None, categories=['F', 'M'], ordered=False)), 'age': FeatureDescriptor(feature_type='numerical', settings=NumericalFeatureSettings(loader_type=None, loader_kwargs=None, dtype='Int32', min_value=22.0, max_value=84.0)), 'insurance': FeatureDescriptor(feature_type='categorical', settings=CategoricalFeatureSettings(loader_type=None, loader_kwargs=None, categories=['MIXED', 'PRIVATE', 'PUBLIC'], ordered=False)), 'chronic_condition': FeatureDescriptor(feature_type='categorical', settings=CategoricalFeatureSettings(loader_type=None, loader_kwargs=None, categories=['False', 'True'], ordered=False))}, temporal_descriptor=TemporalDescriptor(temporal_type='datetime', settings=DateTimeSettings(min_value=Timestamp('2023-01-02 00:00:00'), max_value=Timestamp('2023-12-26 00:00:00'), timezone='Europe/Paris', format=None)), granularity=<Granularity.DAY: 4>, entity_descriptors={'event_type': FeatureDescriptor(feature_type='categorical', settings=CategoricalFeatureSettings(loader_type=None, loader_kwargs=None, categories=['CONSULTATION', 'EMERGENCY', 'EXAM', 'FOLLOW_UP', 'VACCINATION'], ordered=False)), 'provider': FeatureDescriptor(feature_type='categorical', settings=CategoricalFeatureSettings(loader_type=None, loader_kwargs=None, categories=['GENERAL_PRACTITIONER', 'LABORATORY', 'NURSE', 'RADIOLOGIST', 'SPECIALIST'], ordered=False))})
# ---
# name: TestMetadataPreservation.test_temporal_metadata_preserved[interval]
  SequenceMetadata(static_descriptors={'gender': FeatureDescriptor(feature_type='categorical', settings=CategoricalFeatureSettings(loader_type=None, loader_kwargs=None, categories=['F', 'M'], ordered=False)), 'age': FeatureDescriptor(feature_type='numerical', settings=NumericalFeatureSettings(loader_type=None, loader_kwargs=None, dtype='Int32', min_value=22.0, max_value=84.0)), 'insurance': FeatureDescriptor(feature_type='categorical', settings=CategoricalFeatureSettings(loader_type=None, loader_kwargs=None, categories=['MIXED', 'PRIVATE', 'PUBLIC'], ordered=False)), 'chronic_condition': FeatureDescriptor(feature_type='categorical', settings=CategoricalFeatureSettings(loader_type=None, loader_kwargs=None, categories=['False', 'True'], ordered=False))}, temporal_descriptor=TemporalDescriptor(temporal_type='datetime', settings=DateTimeSettings(min_value=Timestamp('2023-01-05 00:00:00'), max_value=Timestamp('2023-10-21 00:00:00'), timezone='Europe/Paris', format=None)), granularity=<Granularity.DAY: 4>, entity_descriptors={'medication': FeatureDescriptor(feature_type='categorical', settings=CategoricalFeatureSettings(loader_type=None, loader_kwargs=None, categories=['ANTIBIOTIC', 'ANTICOAGULANT', 'ANTIHYPERTENSIVE', 'CORTICOSTEROID', 'PAIN_RELIEVER'], ordered=False)), 'administration_route': FeatureDescriptor(feature_type='categorical', settings=CategoricalFeatureSettings(loader_type=None, loader_kwargs=None, categories=['CUTANEOUS', 'INHALATION', 'INTRAMUSCULAR', 'INTRAVENOUS', 'ORAL'], ordered=False)), 'dosage': FeatureDescriptor(feature_type='numerical', settings=NumericalFeatureSettings(loader_type=None, loader_kwargs=None, dtype='Int32', min_value=1.0, max_value=3.0))})
# ---
# name: TestMetadataPreservation.test_temporal_metadata_preserved[state]
  SequenceMetadata(static_descriptors={'gender': FeatureDescriptor(feature_type='categorical', settings=CategoricalFeatureSettings(loader_type=None, loader_kwargs=None, categories=['F', 'M'], ordered=False)), 'age': FeatureDescriptor(feature_type='numerical', settings=NumericalFeatureSettings(loader_type=None, loader_kwargs=None, dtype='Int32', min_value=22.0, max_value=84.0)), 'insurance': FeatureDescriptor(feature_type='categorical', settings=CategoricalFeatureSettings(loader_type=None, loader_kwargs=None, categories=['MIXED', 'PRIVATE', 'PUBLIC'], ordered=False)), 'chronic_condition': FeatureDescriptor(feature_type='categorical', settings=CategoricalFeatureSettings(loader_type=None, loader_kwargs=None, categories=['False', 'True'], ordered=False))}, temporal_descriptor=TemporalDescriptor(temporal_type='datetime', settings=DateTimeSettings(min_value=Timestamp('2023-01-01 00:00:00'), max_value=Timestamp('2023-12-16 00:00:00'), timezone='Europe/Paris', format=None)), granularity=<Granularity.DAY: 4>, entity_descriptors={'health_state': FeatureDescriptor(feature_type='categorical', settings=CategoricalFeatureSettings(loader_type=None, loader_kwargs=None, categories=['CHRONIC_MONITORING', 'CONVALESCENCE', 'HEALTHY', 'REMISSION', 'TREATMENT'], ordered=False)), 'condition': FeatureDescriptor(feature_type='categorical', settings=CategoricalFeatureSettings(loader_type=None, loader_kwargs=None, categories=['CARDIAC', 'DIGESTIVE', 'NEUROLOGICAL', 'RESPIRATORY'], ordered=False))})
# ---
